// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generated pair geometry is stable 1`] = `
"#000 overlapping a@(33,65,33)+(16,16,16) b@(36.60434902906418,71.15614683441818,42.39810369983316)+(0,64,48)
#001 face-abut-x a@(1,81,1)+(16,16,32) b@(17.05,81.7255215793848,3.6954692732542753)+(8,8,100)
#002 face-abut-y a@(113,97,1)+(0,64,48) b@(113.25167290307581,161.2,-1.2724639475345612)+(0,64,48)
#003 stacked a@(1,33,1)+(64,0,48) b@(1.6630967669188976,32.034499460831285,49.2)+(16,16,32)
#004 inside a@(97,113,1)+(1,48,48) b@(97.3,127.4,15.399999999999999)+(0.4,19.200000000000003,19.200000000000003)
#005 disjoint a@(113,49,17)+(8,8,100) b@(359.61232233047485,348.43393093999475,57.00300291180611)+(64,0,48)
#006 seam-x-run a@(113,113,1)+(128,128,16) b@(156.91452658176422,241.02,17.02)+(48,16,16)
#007 seam-y-run a@(49,17,17)+(48,16,16) b@(97.2,19.64511152729392,33.2)+(16,16,32)
#008 random a@(113,17,33)+(16,48,16) b@(7.630546152591705,99.26804375648499,5.4876865819096565)+(16,16,16)
#009 overlapping a@(17,97,17)+(12,12,12) b@(20.283871524594723,103.06588387032971,24.16566839404404)+(64,0,48)
#010 face-abut-x a@(1,1,33)+(16,16,16) b@(17.2,0.6427120305597782,32.13121129758656)+(12,12,12)
#011 face-abut-y a@(113,81,17)+(16,16,32) b@(110.16820193640888,97.05,20.216744769364595)+(128,128,16)
#012 stacked a@(81,65,17)+(0,64,48) b@(80.37151476740837,65.50676420144737,65)+(48,16,16)
#013 inside a@(33,97,1)+(64,0,48) b@(52.2,97,15.399999999999999)+(25.6,0,19.200000000000003)
#014 disjoint a@(113,49,17)+(1,48,48) b@(348.34220182336867,251.0968400174752,43.391606509685516)+(12,12,12)
#015 seam-x-run a@(49,49,33)+(8,8,100) b@(49.0064045060426,57,133)+(48,16,16)
#016 seam-y-run a@(81,1,1)+(128,128,16) b@(209,16.656657814979553,17)+(64,0,48)
#017 random a@(65,65,17)+(48,16,16) b@(252.67570942640305,123.66638457775116,29.583505861461163)+(48,16,16)
#018 overlapping a@(81,81,17)+(16,48,16) b@(89.010750849545,93.43914803154766,27.714281075447797)+(12,12,12)
#019 face-abut-x a@(1,17,17)+(12,12,12) b@(13,17.49664493650198,16.801474740728736)+(16,48,16)
#020 face-abut-y a@(49,1,33)+(16,16,16) b@(50.89082540757954,17.2,33.05009511858225)+(1,48,48)
#021 stacked a@(33,81,33)+(16,16,32) b@(35.2422437556088,81.67584851570427,65)+(16,48,16)
#022 inside a@(17,1,17)+(0,64,48) b@(17,20.2,31.4)+(0,25.6,19.200000000000003)
#023 disjoint a@(1,1,33)+(64,0,48) b@(223.61606687679887,233.32490092050284,19.759358257055283)+(16,48,16)
#024 seam-x-run a@(97,33,1)+(1,48,48) b@(97.34759779414162,81,49)+(1,48,48)
#025 seam-y-run a@(65,49,17)+(8,8,100) b@(73,51.80603258498013,117)+(128,128,16)
#026 random a@(97,81,17)+(128,128,16) b@(124.14445000886917,181.08441400527954,24.120827116072178)+(16,16,16)
#027 overlapping a@(33,49,17)+(48,16,16) b@(60.75955271199345,58.58118741847575,28.07628212571144)+(128,128,16)
#028 face-abut-x a@(33,97,1)+(16,48,16) b@(49.05,93.30871431156993,-2.421990280970931)+(48,16,16)
#029 face-abut-y a@(81,33,17)+(12,12,12) b@(80.34138613007963,45.2,19.636714573949575)+(16,16,32)
#030 stacked a@(65,1,17)+(16,16,16) b@(64.82531658560038,-2.0218097511678934,33)+(1,48,48)
#031 inside a@(1,113,17)+(16,16,32) b@(5.8,117.8,26.6)+(6.4,6.4,12.8)
#032 disjoint a@(65,33,17)+(0,64,48) b@(360.25978001765907,241.94069124478847,18.728658437728882)+(128,128,16)
#033 seam-x-run a@(49,49,33)+(64,0,48) b@(63.23593990504742,49.2,81.2)+(48,16,16)
#034 seam-y-run a@(17,65,1)+(1,48,48) b@(18.2,73.62533731013536,49.2)+(128,128,16)
#035 random a@(33,1,1)+(8,8,100) b@(97.03488343954086,237.79060280323029,73.96166797727346)+(64,0,48)
#036 overlapping a@(97,81,17)+(128,128,16) b@(144.9203636407852,156.99752827584743,23.307713151723146)+(16,16,32)
#037 face-abut-x a@(17,49,17)+(48,16,16) b@(65.2,48.087292701005936,18.771685687825084)+(8,8,100)
#038 face-abut-y a@(65,97,33)+(16,48,16) b@(67.44149994291365,145.2,36.58102212846279)+(128,128,16)
#039 stacked a@(65,33,1)+(12,12,12) b@(64.08192371949553,33.96773708797991,13.05)+(64,0,48)
#040 inside a@(33,113,1)+(16,16,16) b@(37.8,117.8,5.8)+(6.4,6.4,6.4)
#041 disjoint a@(1,97,17)+(16,16,32) b@(215.13000840693712,372.8503542980179,23.140611559152603)+(48,16,16)
#042 seam-x-run a@(81,49,17)+(0,64,48) b@(81,113.2,65.2)+(48,16,16)
#043 seam-y-run a@(81,49,33)+(64,0,48) b@(145,49,81)+(16,16,16)
#044 random a@(113,81,33)+(1,48,48) b@(132.34665113687515,213.9170081615448,42.79131115227938)+(128,128,16)
#045 overlapping a@(17,97,33)+(8,8,100) b@(22.08864750750363,100.53669936899095,71.26801956631243)+(8,8,100)
#046 face-abut-x a@(17,1,33)+(128,128,16) b@(145.2,-1.1677979938685894,32.932799668982625)+(48,16,16)
#047 face-abut-y a@(17,81,1)+(48,16,16) b@(20.89614030532539,97.2,1.8302655257284641)+(128,128,16)
#048 stacked a@(97,113,17)+(16,48,16) b@(94.06161354482174,113.17423818819225,33)+(1,48,48)
#049 inside a@(81,49,17)+(12,12,12) b@(84.6,52.6,20.6)+(4.800000000000001,4.800000000000001,4.800000000000001)
#050 disjoint a@(1,97,33)+(16,16,16) b@(285.96478688903153,332.5032624909654,59.62692576646805)+(128,128,16)
#051 seam-x-run a@(33,33,33)+(16,16,32) b@(34.97053514793515,49,65)+(0,64,48)
#052 seam-y-run a@(97,97,17)+(0,64,48) b@(97.02,121.2528532743454,65.02)+(16,48,16)
#053 random a@(33,65,17)+(64,0,48) b@(200.35093992948532,44.71952760219574,80.16829221695662)+(8,8,100)
#054 overlapping a@(17,49,33)+(1,48,48) b@(17.46945371320471,61.48029083795846,52.372684145718814)+(8,8,100)
#055 face-abut-x a@(65,113,33)+(8,8,100) b@(73.05,113.60034153610468,30.38392842374742)+(48,16,16)
#056 face-abut-y a@(97,65,1)+(128,128,16) b@(100.31035277433693,193,-0.15975303202867508)+(16,16,32)
#057 stacked a@(113,33,17)+(48,16,16) b@(113.0068608559668,30.95482193119824,33.05)+(12,12,12)
#058 inside a@(81,1,33)+(16,48,16) b@(85.8,15.399999999999999,37.8)+(6.4,19.200000000000003,6.4)
#059 disjoint a@(1,49,1)+(12,12,12) b@(252.8247182480991,311.74871442001313,18.58513256907463)+(16,48,16)
#060 seam-x-run a@(81,81,17)+(16,16,16) b@(85.38431838899851,97.02,33.02)+(12,12,12)
#061 seam-y-run a@(113,81,17)+(16,16,32) b@(129.2,87.26910542324185,49.2)+(16,16,32)
#062 random a@(1,113,1)+(0,64,48) b@(193.0831578373909,175.732684135437,3.0602272525429726)+(8,8,100)
#063 overlapping a@(1,17,17)+(64,0,48) b@(27.450181218981744,17,44.29204927980899)+(16,16,32)
#064 face-abut-x a@(1,113,1)+(1,48,48) b@(2.05,111.5748560987413,-0.7636988665908575)+(12,12,12)
#065 face-abut-y a@(113,113,33)+(8,8,100) b@(116.06976342760026,121,36.85787011310458)+(128,128,16)
#066 stacked a@(1,97,33)+(128,128,16) b@(-0.367926187813282,95.55077387951314,49.05)+(16,48,16)
#067 inside a@(81,17,33)+(48,16,16) b@(95.4,21.8,37.8)+(19.200000000000003,6.4,6.4)
#068 disjoint a@(17,65,33)+(16,48,16) b@(222.7639708276838,362.14874767232686,28.408689379692078)+(16,48,16)
#069 seam-x-run a@(81,33,33)+(12,12,12) b@(83.11670645792037,45.02,45.02)+(12,12,12)
#070 seam-y-run a@(81,81,33)+(16,16,16) b@(97,86.19530645757914,49)+(48,16,16)
#071 random a@(97,113,17)+(16,16,32) b@(196.33951610326767,177.47519266605377,87.43969907611609)+(12,12,12)
#072 overlapping a@(33,1,17)+(0,64,48) b@(33,37.08740512579679,35.2783940307796)+(16,16,16)
#073 face-abut-x a@(81,17,33)+(64,0,48) b@(145.2,16.244289442896843,31.773481650277972)+(16,16,16)
#074 face-abut-y a@(97,65,17)+(1,48,48) b@(94.9858577940613,113.2,20.833203673362732)+(1,48,48)
#075 stacked a@(97,81,17)+(8,8,100) b@(93.92567218467593,83.38174148835242,117.2)+(128,128,16)
#076 inside a@(113,33,33)+(128,128,16) b@(151.4,71.4,37.8)+(51.2,51.2,6.4)
#077 disjoint a@(81,1,17)+(48,16,16) b@(343.79601491987705,261.3413056349382,23.636027365922928)+(16,48,16)
#078 seam-x-run a@(113,113,33)+(16,48,16) b@(116.88809238374233,161.2,49.2)+(128,128,16)
#079 seam-y-run a@(81,81,33)+(12,12,12) b@(93.02,81.59438162762672,45.02)+(128,128,16)
#080 random a@(65,33,33)+(16,16,16) b@(193.70876747369766,110.61255764961243,63.60817081481218)+(16,16,16)
#081 overlapping a@(49,1,33)+(16,16,32) b@(59.759330690652135,5.006401522830129,50.16666520535946)+(12,12,12)
#082 face-abut-x a@(1,33,33)+(0,64,48) b@(1.2,32.27473086491227,30.28146188147366)+(128,128,16)
#083 face-abut-y a@(17,33,17)+(64,0,48) b@(17.83981935493648,33.2,15.200319427996874)+(1,48,48)
#084 stacked a@(1,81,33)+(1,48,48) b@(-2.7620677947998047,82.99240463785827,81.05)+(16,16,16)
#085 inside a@(81,97,33)+(8,8,100) b@(83.4,99.4,63)+(3.2,3.2,40)
#086 disjoint a@(1,113,33)+(128,128,16) b@(281.55107058025897,407.36440283898264,20.995107114315033)+(64,0,48)
#087 seam-x-run a@(113,33,17)+(48,16,16) b@(115.03602696582675,49,33)+(16,16,16)
#088 seam-y-run a@(81,113,33)+(16,48,16) b@(97.2,133.76608557999134,49.2)+(64,0,48)
#089 random a@(81,17,17)+(12,12,12) b@(171.42035073041916,3.7329519987106323,3.7596455737948418)+(1,48,48)
#090 overlapping a@(1,17,1)+(16,16,16) b@(6.938638795912266,26.83030964694917,10.253631853312253)+(16,16,32)
#091 face-abut-x a@(17,49,33)+(16,16,32) b@(33.2,52.947025291621685,29.16208036802709)+(12,12,12)
#092 face-abut-y a@(49,97,17)+(0,64,48) b@(46.1540291775018,161.2,13.30522496253252)+(8,8,100)
#093 stacked a@(1,17,17)+(64,0,48) b@(2.1438558287918568,19.511963548138738,65.05)+(16,16,16)
#094 inside a@(1,81,1)+(1,48,48) b@(1.3,95.4,15.399999999999999)+(0.4,19.200000000000003,19.200000000000003)
#095 disjoint a@(97,113,33)+(8,8,100) b@(380.5105207748711,386.19958962034434,46.13254460692406)+(1,48,48)
#096 seam-x-run a@(81,65,1)+(128,128,16) b@(116.22400897741318,193.02,17.02)+(128,128,16)
#097 seam-y-run a@(33,65,17)+(48,16,16) b@(81.02,67.28849852457643,33.02)+(1,48,48)
#098 random a@(17,65,1)+(16,48,16) b@(3.0401914715766907,171.1426272392273,23.889540947973728)+(16,16,32)
#099 overlapping a@(113,113,1)+(12,12,12) b@(120.40814413744957,119.93679607016966,9.295106986165045)+(1,48,48)
#100 face-abut-x a@(97,81,1)+(16,16,16) b@(113,84.63267965242267,0.986992621794343)+(48,16,16)
#101 face-abut-y a@(81,81,17)+(16,16,32) b@(81.27814074419439,97.05,15.11077394708991)+(64,0,48)
#102 stacked a@(33,113,33)+(0,64,48) b@(34.10938472300768,113.49460813961923,81)+(48,16,16)
#103 inside a@(17,1,33)+(64,0,48) b@(36.2,1,47.4)+(25.6,0,19.200000000000003)
#104 disjoint a@(33,1,33)+(1,48,48) b@(266.5980750154704,260.4219231279567,1.1288700103759766)+(16,48,16)
#105 seam-x-run a@(49,1,1)+(8,8,100) b@(50.871393447741866,9.2,101.2)+(12,12,12)
#106 seam-y-run a@(65,97,17)+(128,128,16) b@(193.02,130.37600654363632,33.02)+(8,8,100)
#107 random a@(33,17,1)+(48,16,16) b@(89.29540914297104,121.33710491657257,20.497997127473354)+(16,16,32)
#108 overlapping a@(113,49,1)+(16,48,16) b@(118.06194060742855,60.334371373429896,11.591996581107377)+(16,16,32)
#109 face-abut-x a@(17,65,17)+(12,12,12) b@(29.2,64.19616085290909,16.532232282683253)+(128,128,16)
#110 face-abut-y a@(33,81,17)+(16,16,16) b@(31.69695653952658,97.05,14.472499266266823)+(64,0,48)
#111 stacked a@(49,33,17)+(16,16,32) b@(51.84084179624915,31.079445401206613,49.2)+(48,16,16)
#112 inside a@(81,113,1)+(0,64,48) b@(81,132.2,15.399999999999999)+(0,25.6,19.200000000000003)
#113 disjoint a@(81,97,1)+(64,0,48) b@(328.4582498893142,364.00380796100944,24.71398177742958)+(1,48,48)
#114 seam-x-run a@(1,113,17)+(1,48,48) b@(1.466730110347271,161,65)+(0,64,48)
#115 seam-y-run a@(1,113,1)+(8,8,100) b@(9,113.65413481555879,101)+(16,16,32)
#116 random a@(1,97,1)+(128,128,16) b@(206.55918031930923,120.05439925193787,95.63058734685183)+(16,16,32)
#117 overlapping a@(49,81,1)+(48,16,16) b@(68.18903850242495,92.19296008236707,7.969645817577839)+(0,64,48)
#118 face-abut-x a@(49,33,1)+(16,48,16) b@(65,30.937843162566423,3.278714658692479)+(12,12,12)
#119 face-abut-y a@(49,49,17)+(12,12,12) b@(48.850145457312465,61,14.255876813083887)+(12,12,12)
#120 stacked a@(17,33,1)+(16,16,16) b@(17.861545577645302,35.04117382876575,17.2)+(16,16,16)
#121 inside a@(65,17,17)+(16,16,32) b@(69.8,21.8,26.6)+(6.4,6.4,12.8)
#122 disjoint a@(33,1,1)+(0,64,48) b@(238.20976413972676,207.261475966312,5.409358561038971)+(1,48,48)
#123 seam-x-run a@(33,81,1)+(64,0,48) b@(35.17691285908222,81.02,49.02)+(48,16,16)
#124 seam-y-run a@(49,97,17)+(1,48,48) b@(50,111.0389838218689,65)+(1,48,48)
#125 random a@(1,97,17)+(8,8,100) b@(241.77700823545456,147.06652104854584,17.64314942806959)+(16,48,16)
#126 overlapping a@(17,1,1)+(128,128,16) b@(98.2992887854576,68.37396409213542,12.036101498454808)+(8,8,100)
#127 face-abut-x a@(113,1,1)+(48,16,16) b@(161,-0.7690746709704399,-2.1281532887369394)+(8,8,100)
#128 face-abut-y a@(65,33,1)+(16,48,16) b@(64.19915259070694,81.2,4.354590259492397)+(8,8,100)
#129 stacked a@(1,49,17)+(12,12,12) b@(-2.1638947390019894,52.99810649640858,29.05)+(128,128,16)
#130 inside a@(97,113,1)+(16,16,16) b@(101.8,117.8,5.8)+(6.4,6.4,6.4)
#131 disjoint a@(49,33,33)+(16,16,32) b@(298.07472720369697,266.9055309770629,18.63609144091606)+(48,16,16)
#132 seam-x-run a@(81,49,17)+(0,64,48) b@(81,113.02,65.02)+(0,64,48)
#133 seam-y-run a@(65,65,1)+(64,0,48) b@(129,65,49)+(16,16,32)
#134 random a@(33,81,33)+(1,48,48) b@(77.86564856767654,151.1155128479004,89.6712071672082)+(16,48,16)
#135 overlapping a@(97,97,33)+(8,8,100) b@(101.46913842521607,100.18150468487292,90.8732499666512)+(48,16,16)
#136 face-abut-x a@(65,113,17)+(128,128,16) b@(193,111.85720023140311,16.103720048442483)+(128,128,16)
#137 face-abut-y a@(17,97,17)+(48,16,16) b@(13.284465467557311,113.2,18.770929615944624)+(128,128,16)
#138 stacked a@(97,97,17)+(16,48,16) b@(94.95196672528982,96.30195682309568,33.05)+(64,0,48)
#139 inside a@(49,17,1)+(12,12,12) b@(52.6,20.6,4.6)+(4.800000000000001,4.800000000000001,4.800000000000001)
#140 disjoint a@(81,49,33)+(16,16,16) b@(296.3040313627571,315.4108905242756,8.140298962593079)+(0,64,48)
#141 seam-x-run a@(33,81,33)+(16,16,32) b@(40.79123821482062,97.2,65.2)+(8,8,100)
#142 seam-y-run a@(113,1,17)+(0,64,48) b@(113.02,28.458636075258255,65.02)+(16,16,16)
#143 random a@(113,81,33)+(64,0,48) b@(153.86594146490097,90.65026533603668,79.12820031493902)+(16,48,16)
#144 overlapping a@(81,49,33)+(1,48,48) b@(81.60881811082363,62.62972918190062,65.23213447853922)+(128,128,16)
#145 face-abut-x a@(113,65,33)+(8,8,100) b@(121.2,67.71062238514423,29.61417598836124)+(128,128,16)
#146 face-abut-y a@(1,33,1)+(128,128,16) b@(2.5867132935673,161.05,-1.1664811074733734)+(16,16,32)
#147 stacked a@(1,65,1)+(48,16,16) b@(4.769342344254255,63.45411359705031,17.05)+(1,48,48)
#148 inside a@(1,81,1)+(16,48,16) b@(5.8,95.4,5.8)+(6.4,19.200000000000003,6.4)
#149 disjoint a@(17,33,1)+(12,12,12) b@(227.49513891339302,277.7066128021106,63.89998748898506)+(0,64,48)
#150 seam-x-run a@(97,17,33)+(16,16,16) b@(99.11260785162449,33,49)+(16,48,16)
#151 seam-y-run a@(49,17,33)+(16,16,32) b@(65.2,19.616642978042364,65.2)+(64,0,48)
#152 random a@(49,97,1)+(0,64,48) b@(102.38079982995987,89.27036499977112,61.650491900742054)+(128,128,16)
#153 overlapping a@(65,81,17)+(64,0,48) b@(102.52823150455951,81,30.58782367259264)+(16,16,32)
#154 face-abut-x a@(49,97,17)+(1,48,48) b@(50.2,97.51418111100793,14.202344255521894)+(8,8,100)
#155 face-abut-y a@(49,65,1)+(8,8,100) b@(50.637888265773654,73,4.854130674153566)+(48,16,16)
#156 stacked a@(49,33,1)+(128,128,16) b@(52.86471989750862,29.775944320484996,17.2)+(16,48,16)
#157 inside a@(33,97,1)+(48,16,16) b@(47.4,101.8,5.8)+(19.200000000000003,6.4,6.4)
#158 disjoint a@(49,33,1)+(16,48,16) b@(263.9804870132357,251.75250341836363,22.989919364452362)+(128,128,16)
#159 seam-x-run a@(33,113,33)+(12,12,12) b@(37.8838411225006,125.2,45.2)+(8,8,100)
#160 seam-y-run a@(65,17,33)+(16,16,16) b@(81.02,18.187811389565468,49.02)+(8,8,100)
#161 random a@(97,81,17)+(16,16,32) b@(91.07960385084152,102.03322303295135,37.750871650874615)+(12,12,12)
#162 overlapping a@(17,49,33)+(0,64,48) b@(17,91.32972020953893,46.414468447119)+(64,0,48)
#163 face-abut-x a@(1,97,1)+(64,0,48) b@(65,93.98464968055487,4.898069372400641)+(1,48,48)
#164 face-abut-y a@(81,81,1)+(1,48,48) b@(80.52429051883519,129.2,4.5644079223275185)+(12,12,12)
#165 stacked a@(81,97,33)+(8,8,100) b@(82.81970839574933,97.00597843714058,133)+(1,48,48)
#166 inside a@(1,65,33)+(128,128,16) b@(39.4,103.4,37.8)+(51.2,51.2,6.4)
#167 disjoint a@(65,49,17)+(48,16,16) b@(267.7030141092837,307.16705271136016,24.693551391363144)+(128,128,16)
#168 seam-x-run a@(97,97,1)+(16,48,16) b@(100.77626165002584,145,17)+(12,12,12)
#169 seam-y-run a@(49,1,33)+(12,12,12) b@(61,4.540417487733066,45)+(1,48,48)
#170 random a@(113,33,33)+(16,16,16) b@(49.30025178194046,238.0307354927063,12.036024250090122)+(16,48,16)
#171 overlapping a@(81,65,33)+(16,16,32) b@(88.08973644003272,73.63638924695552,54.79966481924057)+(128,128,16)
#172 face-abut-x a@(33,17,1)+(0,64,48) b@(33,14.981343250721693,2.262951308861375)+(128,128,16)
#173 face-abut-y a@(113,17,1)+(64,0,48) b@(109.18061076663435,17.2,-1.9751241840422153)+(1,48,48)
#174 stacked a@(49,33,1)+(1,48,48) b@(50.14604113250971,33.0046345051378,49.2)+(128,128,16)
#175 inside a@(81,17,33)+(8,8,100) b@(83.4,19.4,63)+(3.2,3.2,40)
#176 disjoint a@(81,49,33)+(128,128,16) b@(371.1398431044072,294.95016066450626,10.463606119155884)+(0,64,48)
#177 seam-x-run a@(97,33,1)+(48,16,16) b@(119.8262733258307,49.2,17.2)+(128,128,16)
#178 seam-y-run a@(65,97,33)+(16,48,16) b@(81.2,112.3258704021573,49.2)+(16,16,32)
#179 random a@(49,81,17)+(12,12,12) b@(165.03011697530746,99.8917247056961,25.18718119710684)+(16,16,32)
#180 overlapping a@(17,33,33)+(16,16,16) b@(20.2598676353693,41.26430686824024,39.47840136364103)+(12,12,12)
#181 face-abut-x a@(97,33,1)+(16,16,32) b@(113.05,36.08908089995384,-0.7264605481177568)+(16,48,16)
#182 face-abut-y a@(113,17,1)+(0,64,48) b@(114.19487720169127,81.2,1.8626889437437057)+(128,128,16)
#183 stacked a@(49,113,1)+(64,0,48) b@(47.08911877498031,109.31746787764132,49.2)+(128,128,16)
#184 inside a@(81,17,1)+(1,48,48) b@(81.3,31.4,15.399999999999999)+(0.4,19.200000000000003,19.200000000000003)
#185 disjoint a@(17,1,33)+(8,8,100) b@(314.6359376683831,283.7542626997456,41.14533844590187)+(16,16,32)
#186 seam-x-run a@(113,81,17)+(128,128,16) b@(157.38484501838684,209.2,33.2)+(64,0,48)
#187 seam-y-run a@(33,81,33)+(48,16,16) b@(81,84.92516366764903,49)+(64,0,48)
#188 random a@(97,113,33)+(16,48,16) b@(35.79716116189957,38.11641192436218,3.996925003826618)+(16,48,16)
#189 overlapping a@(17,1,33)+(12,12,12) b@(22.567084927670656,6.855638838466257,38.05400588326156)+(64,0,48)
#190 face-abut-x a@(49,65,1)+(16,16,16) b@(65.05,67.31210957840085,-0.9154685419052839)+(48,16,16)
#191 face-abut-y a@(49,17,17)+(16,16,32) b@(45.72680571489036,33.2,17.171121660619974)+(8,8,100)
#192 stacked a@(81,113,17)+(0,64,48) b@(80.41653780639172,111.48072795383632,65)+(0,64,48)
#193 inside a@(49,1,17)+(64,0,48) b@(68.2,1,31.4)+(25.6,0,19.200000000000003)
#194 disjoint a@(49,81,33)+(1,48,48) b@(255.21657934971154,356.3488758811727,8.189060032367706)+(12,12,12)
#195 seam-x-run a@(17,65,17)+(8,8,100) b@(17.977086747065187,73.02,117.02)+(48,16,16)
#196 seam-y-run a@(17,65,1)+(128,128,16) b@(145.2,111.1549608707428,17.2)+(8,8,100)
#197 random a@(81,1,1)+(48,16,16) b@(33.25245398283005,85.39917123317719,90.59886448830366)+(16,48,16)
#198 overlapping a@(81,17,17)+(16,48,16) b@(88.5441173657775,44.1404436904937,23.099850126355886)+(0,64,48)
#199 face-abut-x a@(1,81,17)+(12,12,12) b@(13.2,81.59481028467417,15.477641051635146)+(64,0,48)
#200 face-abut-y a@(113,113,17)+(16,16,16) b@(110.08740499801934,129.2,19.692871920764446)+(16,16,32)
#201 stacked a@(97,17,1)+(16,16,32) b@(95.77461213245988,18.148326562717557,33.05)+(16,48,16)
#202 inside a@(97,81,17)+(0,64,48) b@(97,100.2,31.4)+(0,25.6,19.200000000000003)
#203 disjoint a@(33,113,33)+(64,0,48) b@(285.8107943944633,324.1462413100526,14.390984028577805)+(16,16,32)
#204 seam-x-run a@(97,113,33)+(1,48,48) b@(97.1498572290875,161,81)+(128,128,16)
#205 seam-y-run a@(33,65,17)+(8,8,100) b@(41,67.79172375239432,117)+(1,48,48)
#206 random a@(113,17,17)+(128,128,16) b@(59.47534877061844,237.34581470489502,70.62064991146326)+(48,16,16)
#207 overlapping a@(1,17,17)+(48,16,16) b@(12.016754726320507,24.64215332902968,25.358546909689903)+(12,12,12)
#208 face-abut-x a@(1,97,17)+(16,48,16) b@(17,93.23656928166747,14.372111329808831)+(8,8,100)
#209 face-abut-y a@(1,49,1)+(12,12,12) b@(-0.9644994083791971,61.2,4.510811399668455)+(1,48,48)
#210 stacked a@(113,65,17)+(16,16,16) b@(114.4849581643939,64.87713154219091,33.2)+(12,12,12)
#211 inside a@(17,97,1)+(16,16,32) b@(21.8,101.8,10.6)+(6.4,6.4,12.8)
#212 disjoint a@(113,1,1)+(0,64,48) b@(321.087390428409,288.1596447424963,21.013952612876892)+(48,16,16)
#213 seam-x-run a@(1,97,1)+(64,0,48) b@(1.5900370925664902,97,49)+(16,16,32)
#214 seam-y-run a@(33,113,33)+(1,48,48) b@(34.02,132.59222143143415,81.02)+(16,48,16)
#215 random a@(49,113,1)+(8,8,100) b@(205.28256458044052,217.24165880680084,47.33454670757055)+(16,48,16)
#216 overlapping a@(81,97,1)+(128,128,16) b@(122.0918234348297,169.1112101882696,6.105872467905283)+(48,16,16)
#217 face-abut-x a@(17,65,17)+(48,16,16) b@(65,62.432259663939476,14.905662639066577)+(48,16,16)
#218 face-abut-y a@(33,49,17)+(16,48,16) b@(35.417154440656304,97,16.883877217769623)+(16,16,32)
#219 stacked a@(1,97,33)+(12,12,12) b@(0.2547761909663677,95.22781207598746,45)+(8,8,100)
#220 inside a@(113,97,17)+(16,16,16) b@(117.8,101.8,21.8)+(6.4,6.4,6.4)
#221 disjoint a@(81,81,1)+(16,16,32) b@(336.031044408679,353.8011537110433,41.95210984349251)+(1,48,48)
#222 seam-x-run a@(113,97,17)+(0,64,48) b@(113,161.2,65.2)+(16,16,16)
#223 seam-y-run a@(113,17,1)+(64,0,48) b@(177.2,17,49.2)+(12,12,12)
#224 random a@(1,65,1)+(1,48,48) b@(195.07242447137833,255.77662205696106,74.97353655844927)+(0,64,48)
#225 overlapping a@(49,33,1)+(8,8,100) b@(53.76402449645102,37.41922702584416,56.11831420473754)+(48,16,16)
#226 face-abut-x a@(49,17,33)+(128,128,16) b@(177.2,14.64634108915925,30.78997658379376)+(1,48,48)
#227 face-abut-y a@(49,97,17)+(48,16,16) b@(51.9067690204829,113,16.592363078147173)+(16,48,16)
#228 stacked a@(33,33,17)+(16,48,16) b@(34.68852335214615,32.22127485089004,33.2)+(8,8,100)
#229 inside a@(113,97,17)+(12,12,12) b@(116.6,100.6,20.6)+(4.800000000000001,4.800000000000001,4.800000000000001)
#230 disjoint a@(33,97,17)+(16,16,16) b@(247.2179145012051,394.7419156813994,55.916082322597504)+(1,48,48)
#231 seam-x-run a@(33,1,1)+(16,16,32) b@(34.06304985657334,17.02,33.02)+(16,48,16)
#232 seam-y-run a@(81,97,1)+(0,64,48) b@(81.2,126.93618029356003,49.2)+(64,0,48)
#233 random a@(17,17,1)+(64,0,48) b@(142.98550003767014,43.88360393047333,59.22466456145048)+(48,16,16)
#234 overlapping a@(17,49,17)+(1,48,48) b@(17.409679065737873,66.51670336015522,46.926193723827595)+(16,16,32)
#235 face-abut-x a@(97,33,33)+(8,8,100) b@(105.05,36.817647986114025,29.402630230411887)+(128,128,16)
#236 face-abut-y a@(97,17,1)+(128,128,16) b@(99.80397759564221,145.05,-2.304069869220257)+(48,16,16)
#237 stacked a@(17,33,1)+(48,16,16) b@(14.215236026793718,29.636042596772313,17.2)+(64,0,48)
#238 inside a@(17,65,17)+(16,48,16) b@(21.8,79.4,21.8)+(6.4,19.200000000000003,6.4)
#239 disjoint a@(97,33,1)+(12,12,12) b@(371.73852979019284,307.90581802558154,20.427730172872543)+(16,48,16)
#240 seam-x-run a@(49,1,17)+(16,16,16) b@(54.28010117262602,17.02,33.02)+(8,8,100)
#241 seam-y-run a@(33,33,33)+(16,16,32) b@(49,37.99039286747575,65)+(48,16,16)
#242 random a@(113,49,17)+(0,64,48) b@(131.41291218996048,158.09639501571655,94.50510124117136)+(1,48,48)
#243 overlapping a@(97,113,1)+(64,0,48) b@(109.84881881177425,113,12.86161575317383)+(128,128,16)
#244 face-abut-x a@(97,65,33)+(1,48,48) b@(98.2,64.99349905177951,29.897707069292665)+(16,16,16)
#245 face-abut-y a@(1,97,17)+(8,8,100) b@(-0.40176532603800297,105,17.459220375865698)+(0,64,48)
#246 stacked a@(1,81,17)+(128,128,16) b@(-2.4151780530810356,81.63973907195032,33)+(48,16,16)
#247 inside a@(113,17,1)+(48,16,16) b@(127.4,21.8,5.8)+(19.200000000000003,6.4,6.4)
#248 disjoint a@(113,81,33)+(16,48,16) b@(382.11024297587574,331.7962168427184,62.7260308265686)+(128,128,16)
#249 seam-x-run a@(33,17,1)+(12,12,12) b@(34.73348742071539,29.2,13.2)+(64,0,48)
#250 seam-y-run a@(17,97,1)+(16,16,16) b@(33,97.06498526781797,17)+(48,16,16)
#251 random a@(81,33,17)+(16,16,32) b@(183.13353818655014,193.0833684206009,5.970138154923916)+(1,48,48)
#252 overlapping a@(17,97,33)+(0,64,48) b@(17,118.77290246933698,51.62771120890975)+(1,48,48)
#253 face-abut-x a@(113,1,17)+(64,0,48) b@(177.05,0.40582334995269775,13.000123796984553)+(16,16,16)
#254 face-abut-y a@(81,65,33)+(1,48,48) b@(82.83333321847022,113.2,31.86401791870594)+(12,12,12)
#255 stacked a@(17,97,33)+(8,8,100) b@(18.9382048510015,97.31815705634654,133.05)+(12,12,12)
#256 inside a@(65,97,17)+(128,128,16) b@(103.4,135.4,21.8)+(51.2,51.2,6.4)
#257 disjoint a@(97,17,33)+(48,16,16) b@(304.5723124668002,244.01559790875763,40.49815812706947)+(16,16,32)
#258 seam-x-run a@(1,81,33)+(16,48,16) b@(3.0164632201194763,129.02,49.02)+(64,0,48)
#259 seam-y-run a@(1,1,17)+(12,12,12) b@(13,1.520190262235701,29)+(12,12,12)
#260 random a@(49,65,17)+(16,16,16) b@(116.61137491464615,69.26320242881775,5.296085841953754)+(16,48,16)
#261 overlapping a@(113,17,17)+(16,16,32) b@(119.40124954357744,21.985067008808254,28.502760687470435)+(0,64,48)
#262 face-abut-x a@(33,49,1)+(0,64,48) b@(33.05,49.72856082394719,-1.4059755187481642)+(48,16,16)
#263 face-abut-y a@(17,97,1)+(64,0,48) b@(20.186887679621577,97,1.1034658886492252)+(12,12,12)
#264 stacked a@(81,33,33)+(1,48,48) b@(79.12026698887348,36.298198414966464,81.05)+(1,48,48)
#265 inside a@(81,1,17)+(8,8,100) b@(83.4,3.4,47)+(3.2,3.2,40)
#266 disjoint a@(17,1,1)+(128,128,16) b@(260.1137115228921,275.27943928632885,5.662319242954254)+(1,48,48)
#267 seam-x-run a@(81,65,17)+(48,16,16) b@(104.21866666898131,81.2,33.2)+(48,16,16)
#268 seam-y-run a@(17,17,17)+(16,48,16) b@(33,22.681955993175507,33)+(48,16,16)
#269 random a@(65,65,1)+(12,12,12) b@(38.234308421611786,154.65888440608978,11.124792866408825)+(1,48,48)
#270 overlapping a@(65,33,33)+(16,16,16) b@(68.59888309687376,36.97536757849157,40.807132460922006)+(16,16,16)
#271 face-abut-x a@(49,49,33)+(16,16,32) b@(65,50.794657535851,31.223406171426177)+(16,16,32)
#272 face-abut-y a@(1,65,1)+(0,64,48) b@(4.125134410336614,129.2,3.2429093345999718)+(128,128,16)
#273 stacked a@(97,113,1)+(64,0,48) b@(95.88109729066491,113.35628779418766,49.2)+(16,16,16)
#274 inside a@(17,33,1)+(1,48,48) b@(17.3,47.4,15.399999999999999)+(0.4,19.200000000000003,19.200000000000003)
#275 disjoint a@(33,81,1)+(8,8,100) b@(237.69704335555434,350.69820137601346,15.24141189455986)+(0,64,48)
#276 seam-x-run a@(113,65,1)+(128,128,16) b@(153.15992838144302,193,17)+(48,16,16)
#277 seam-y-run a@(17,17,17)+(48,16,16) b@(65,23.97143729403615,33)+(16,48,16)
#278 random a@(65,97,17)+(16,48,16) b@(67.52553969621658,173.3962459564209,37.65025470405817)+(128,128,16)
#279 overlapping a@(97,33,17)+(12,12,12) b@(105.29697881881148,35.48479000953957,23.907036697119473)+(48,16,16)
#280 face-abut-x a@(81,113,1)+(16,16,16) b@(97,115.90253844484687,-1.3065474834293127)+(16,16,32)
#281 face-abut-y a@(113,1,33)+(16,16,32) b@(116.50121352635324,17,36.333496909588575)+(1,48,48)
#282 stacked a@(81,1,1)+(0,64,48) b@(82.40011551231146,2.161674013361335,49.2)+(16,48,16)
#283 inside a@(1,113,17)+(64,0,48) b@(20.2,113,31.4)+(25.6,0,19.200000000000003)
#284 disjoint a@(17,1,33)+(1,48,48) b@(310.66147234104574,286.85527644027025,50.67906439304352)+(48,16,16)
#285 seam-x-run a@(81,113,17)+(8,8,100) b@(83.54814432375133,121.02,117.02)+(1,48,48)
#286 seam-y-run a@(49,49,17)+(128,128,16) b@(177.2,112.7446957230568,33.2)+(48,16,16)
#287 random a@(33,81,17)+(48,16,16) b@(7.608916699886322,192.50327932834625,28.171531222760677)+(0,64,48)
#288 overlapping a@(65,17,17)+(16,48,16) b@(72.73571778535843,31.205652565136553,22.033871755748986)+(16,16,16)
#289 face-abut-x a@(17,1,17)+(12,12,12) b@(29,3.50600303709507,19.593864453956485)+(12,12,12)
#290 face-abut-y a@(1,113,33)+(16,16,16) b@(2.5354087743908167,129.05,33.17873665690422)+(48,16,16)
#291 stacked a@(1,33,17)+(16,16,32) b@(-0.3307948298752308,29.624345714226365,49)+(128,128,16)
#292 inside a@(17,1,17)+(0,64,48) b@(17,20.2,31.4)+(0,25.6,19.200000000000003)
#293 disjoint a@(113,17,33)+(64,0,48) b@(331.46336275339127,269.4938858812675,6.762120991945267)+(16,16,16)
#294 seam-x-run a@(33,81,33)+(1,48,48) b@(33.35133593995124,129.2,81.2)+(128,128,16)
#295 seam-y-run a@(17,17,33)+(8,8,100) b@(25.2,19.655617518350482,133.2)+(16,16,32)
#296 random a@(65,33,1)+(128,128,16) b@(63.45942264795303,147.91648507118225,66.52994150668383)+(128,128,16)
#297 overlapping a@(97,65,33)+(48,16,16) b@(112.99071583375334,73.51293654628098,41.79324213117361)+(12,12,12)
#298 face-abut-x a@(17,49,1)+(16,48,16) b@(33.2,46.058051619678736,0.260789530351758)+(128,128,16)
#299 face-abut-y a@(17,17,1)+(12,12,12) b@(17.248634470626712,29.05,-2.8192362897098064)+(1,48,48)
#300 stacked a@(49,65,33)+(16,16,16) b@(46.18505057692528,65.2001003306359,49.05)+(12,12,12)
#301 inside a@(17,97,1)+(16,16,32) b@(21.8,101.8,10.6)+(6.4,6.4,12.8)
#302 disjoint a@(33,49,17)+(0,64,48) b@(259.9953476730734,303.6923198038712,37.62613505125046)+(64,0,48)
#303 seam-x-run a@(1,81,33)+(64,0,48) b@(4.9397062212228775,81.2,81.2)+(16,16,32)
#304 seam-y-run a@(81,97,1)+(1,48,48) b@(82.2,97.9882190078497,49.2)+(8,8,100)
#305 random a@(49,113,1)+(8,8,100) b@(86.720070540905,125.85050094127655,52.19225477427244)+(64,0,48)
#306 overlapping a@(33,97,33)+(128,128,16) b@(59.025705015659334,126.34954061210155,36.59946357533336)+(128,128,16)
#307 face-abut-x a@(81,113,17)+(48,16,16) b@(129,115.56821259111166,16.951763918623328)+(16,48,16)
#308 face-abut-y a@(33,113,1)+(16,48,16) b@(29.115771071985364,161.2,-1.2678597792983055)+(1,48,48)
#309 stacked a@(81,33,33)+(12,12,12) b@(78.62743579223752,34.450617941096425,45)+(16,16,16)
#310 inside a@(17,81,1)+(16,16,16) b@(21.8,85.8,5.8)+(6.4,6.4,6.4)
#311 disjoint a@(65,1,17)+(16,16,32) b@(279.96283197775483,232.50456964503974,44.132932513952255)+(16,16,32)
#312 seam-x-run a@(65,17,1)+(0,64,48) b@(65,81,49)+(64,0,48)
#313 seam-y-run a@(65,1,33)+(64,0,48) b@(129,1,81)+(16,16,16)
#314 random a@(1,33,17)+(1,48,48) b@(132.11645394563675,20.937262058258057,32.33534613996744)+(16,48,16)
#315 overlapping a@(49,97,17)+(8,8,100) b@(52.771940250322224,100.38943948913365,83.3740261271596)+(128,128,16)
#316 face-abut-x a@(97,97,1)+(128,128,16) b@(225.05,93.53450350090861,-2.671606307849288)+(48,16,16)
#317 face-abut-y a@(65,17,33)+(48,16,16) b@(66.96326344273984,33.2,31.97057032212615)+(128,128,16)
#318 stacked a@(97,49,33)+(16,48,16) b@(98.23932579904795,51.66420406661928,49.2)+(16,48,16)
#319 inside a@(97,33,17)+(12,12,12) b@(100.6,36.6,20.6)+(4.800000000000001,4.800000000000001,4.800000000000001)
#320 disjoint a@(49,97,17)+(16,16,16) b@(273.44146457128227,349.42231090087444,46.221808195114136)+(0,64,48)
#321 seam-x-run a@(49,113,1)+(16,16,32) b@(51.2314446978271,129,33)+(0,64,48)
#322 seam-y-run a@(97,49,33)+(0,64,48) b@(97.02,50.34061440825462,81.02)+(16,16,32)
#323 random a@(65,81,17)+(64,0,48) b@(162.75020402669907,71.79094231128693,52.63153596967459)+(16,16,32)"
`;

exports[`pinned draw-order decisions at camera angle (+0,-1) 1`] = `
"#000 class=overlap cmp=1 fine=2 mtv=3.6043490290641813
#001 class=overlap cmp=-1 fine=-1 mtv=0.05000000000000071
#002 class=none cmp=0 fine=1 mtv=-0.19999999999998863
#003 class=overlap cmp=-1 fine=-1 mtv=0.20000000000000284
#004 class=overlap cmp=-1 fine=2 mtv=-0.7000000000000028
#005 class=none cmp=0 fine=1 mtv=-59.99699708819389
#006 class=adjacent cmp=-1 fine=1 mtv=0.019999999999999574
#007 class=overlap cmp=-1 fine=-1 mtv=0.20000000000000284
#008 class=none cmp=0 fine=1 mtv=-11.512313418090343
#009 class=overlap cmp=-1 fine=2 mtv=-4.83433160595596
#010 class=overlap cmp=-1 fine=-1 mtv=0.1999999999999993
#011 class=overlap cmp=1 fine=1 mtv=-0.04999999999999716
#012 class=overlap cmp=-1 fine=-1 mtv=0
#013 class=overlap cmp=1 fine=1 mtv=0
#014 class=none cmp=0 fine=1 mtv=-21.608393490314484
#015 class=adjacent cmp=-1 fine=1 mtv=0
#016 class=overlap cmp=-1 fine=-1 mtv=0
#017 class=none cmp=0 fine=1 mtv=-3.4164941385388374
#018 class=overlap cmp=-1 fine=2 mtv=-5.285718924552203
#019 class=overlap cmp=-1 fine=-1 mtv=0
#020 class=overlap cmp=1 fine=1 mtv=-0.1999999999999993
#021 class=overlap cmp=-1 fine=-1 mtv=0
#022 class=overlap cmp=1 fine=1 mtv=0
#023 class=none cmp=0 fine=1 mtv=2.7593582570552826
#024 class=adjacent cmp=-1 fine=1 mtv=0
#025 class=overlap cmp=-1 fine=-1 mtv=0
#026 class=overlap cmp=-1 fine=2 mtv=-8.879172883927822
#027 class=overlap cmp=-1 fine=2 mtv=-4.92371787428856
#028 class=overlap cmp=-1 fine=-1 mtv=0.04999999999999716
#029 class=overlap cmp=1 fine=1 mtv=-0.20000000000000284
#030 class=overlap cmp=-1 fine=-1 mtv=0
#031 class=overlap cmp=-1 fine=2 mtv=-11.2
#032 class=none cmp=0 fine=1 mtv=17.728658437728882
#033 class=none cmp=0 fine=1 mtv=0.20000000000000284
#034 class=overlap cmp=-1 fine=-1 mtv=0.1999999999999993
#035 class=none cmp=0 fine=1 mtv=-27.038332022726536
#036 class=overlap cmp=-1 fine=2 mtv=-9.692286848276854
#037 class=overlap cmp=-1 fine=-1 mtv=0.20000000000000284
#038 class=overlap cmp=1 fine=1 mtv=-0.19999999999998863
#039 class=overlap cmp=-1 fine=-1 mtv=0.05000000000000071
#040 class=overlap cmp=1 fine=2 mtv=11.199999999999996
#041 class=none cmp=0 fine=1 mtv=22.140611559152603
#042 class=none cmp=0 fine=1 mtv=0
#043 class=none cmp=0 fine=1 mtv=0
#044 class=none cmp=0 fine=1 mtv=18.346651136875153
#045 class=overlap cmp=-1 fine=2 mtv=-2.91135249249637
#046 class=overlap cmp=-1 fine=-1 mtv=0.19999999999998863
#047 class=overlap cmp=1 fine=1 mtv=-0.20000000000000284
#048 class=none cmp=0 fine=1 mtv=0
#049 class=overlap cmp=1 fine=2 mtv=8.399999999999991
#050 class=none cmp=0 fine=1 mtv=10.626925766468048
#051 class=adjacent cmp=0 fine=1 mtv=0
#052 class=overlap cmp=-1 fine=-1 mtv=0.01999999999999602
#053 class=none cmp=0 fine=-1 mtv=12.28047239780426
#054 class=overlap cmp=-1 fine=2 mtv=-0.530546286795289
#055 class=overlap cmp=-1 fine=-1 mtv=0.04999999999999716
#056 class=overlap cmp=1 fine=1 mtv=0
#057 class=overlap cmp=-1 fine=-1 mtv=0.04999999999999716
#058 class=overlap cmp=1 fine=2 mtv=11.199999999999996
#059 class=none cmp=0 fine=1 mtv=5.585132569074631
#060 class=adjacent cmp=-1 fine=1 mtv=-0.01999999999999602
#061 class=overlap cmp=-1 fine=-1 mtv=0.19999999999998863
#062 class=none cmp=0 fine=-1 mtv=1.2673158645629883
#063 class=overlap cmp=1 fine=1 mtv=0
#064 class=overlap cmp=-1 fine=-1 mtv=0.04999999999999982
#065 class=overlap cmp=1 fine=1 mtv=0
#066 class=overlap cmp=-1 fine=-1 mtv=0.04999999999999716
#067 class=overlap cmp=1 fine=2 mtv=11.199999999999996
#068 class=none cmp=0 fine=1 mtv=11.408689379692078
#069 class=adjacent cmp=-1 fine=1 mtv=0.020000000000003126
#070 class=overlap cmp=-1 fine=-1 mtv=0
#071 class=none cmp=0 fine=1 mtv=38.439699076116085
#072 class=overlap cmp=-1 fine=-1 mtv=0
#073 class=overlap cmp=-1 fine=-1 mtv=0.19999999999998863
#074 class=overlap cmp=1 fine=1 mtv=-0.20000000000000284
#075 class=overlap cmp=-1 fine=-1 mtv=0.20000000000000284
#076 class=overlap cmp=1 fine=2 mtv=11.199999999999996
#077 class=none cmp=0 fine=1 mtv=-9.363972634077072
#078 class=none cmp=0 fine=1 mtv=-0.19999999999998863
#079 class=overlap cmp=-1 fine=-1 mtv=0.01999999999999602
#080 class=none cmp=0 fine=1 mtv=14.608170814812183
#081 class=overlap cmp=-1 fine=2 mtv=-5.240669309347865
#082 class=overlap cmp=-1 fine=-1 mtv=0.19999999999999996
#083 class=overlap cmp=1 fine=1 mtv=-0.20000000000000284
#084 class=overlap cmp=-1 fine=-1 mtv=0.04999999999999716
#085 class=overlap cmp=-1 fine=2 mtv=-5.599999999999994
#086 class=none cmp=0 fine=1 mtv=-28.004892885684967
#087 class=adjacent cmp=-1 fine=1 mtv=0
#088 class=overlap cmp=-1 fine=-1 mtv=0.20000000000000284
#089 class=none cmp=0 fine=-1 mtv=-25.24035442620516
#090 class=overlap cmp=1 fine=2 mtv=6.169690353050829
#091 class=overlap cmp=-1 fine=-1 mtv=0.20000000000000284
#092 class=overlap cmp=1 fine=1 mtv=-0.19999999999998863
#093 class=none cmp=0 fine=1 mtv=0.04999999999999716
#094 class=overlap cmp=-1 fine=2 mtv=-0.7
#095 class=none cmp=0 fine=1 mtv=61.13254460692406
#096 class=adjacent cmp=-1 fine=1 mtv=0.019999999999999574
#097 class=overlap cmp=-1 fine=-1 mtv=0.01999999999999602
#098 class=none cmp=0 fine=1 mtv=2.0401914715766907
#099 class=overlap cmp=-1 fine=2 mtv=-3.7048930138349547
#100 class=overlap cmp=-1 fine=-1 mtv=0
#101 class=overlap cmp=1 fine=1 mtv=-0.04999999999999716
#102 class=overlap cmp=-1 fine=-1 mtv=0
#103 class=overlap cmp=1 fine=1 mtv=0
#104 class=none cmp=0 fine=1 mtv=-15.871129989624023
#105 class=none cmp=0 fine=1 mtv=-0.1999999999999993
#106 class=overlap cmp=-1 fine=-1 mtv=0.020000000000003126
#107 class=none cmp=0 fine=1 mtv=3.4979971274733543
#108 class=overlap cmp=-1 fine=2 mtv=-5.408003418892623
#109 class=overlap cmp=-1 fine=-1 mtv=0.1999999999999993
#110 class=overlap cmp=1 fine=1 mtv=-0.04999999999999716
#111 class=overlap cmp=-1 fine=-1 mtv=0.20000000000000284
#112 class=overlap cmp=1 fine=1 mtv=0
#113 class=none cmp=0 fine=1 mtv=-24.28601822257042
#114 class=adjacent cmp=0 fine=1 mtv=0
#115 class=overlap cmp=-1 fine=-1 mtv=0
#116 class=overlap cmp=-1 fine=-1 mtv=-39.054399251937866
#117 class=overlap cmp=1 fine=2 mtv=4.807039917632935
#118 class=overlap cmp=-1 fine=-1 mtv=0
#119 class=overlap cmp=1 fine=1 mtv=0
#120 class=overlap cmp=-1 fine=-1 mtv=0.1999999999999993
#121 class=overlap cmp=1 fine=2 mtv=11.2
#122 class=none cmp=0 fine=1 mtv=-43.59064143896103
#123 class=adjacent cmp=-1 fine=1 mtv=-0.01999999999999602
#124 class=overlap cmp=-1 fine=-1 mtv=0
#125 class=none cmp=0 fine=1 mtv=16.64314942806959
#126 class=overlap cmp=-1 fine=2 mtv=-4.9638985015451915
#127 class=overlap cmp=-1 fine=-1 mtv=0
#128 class=overlap cmp=1 fine=1 mtv=-0.20000000000000284
#129 class=overlap cmp=-1 fine=-1 mtv=0.05000000000000071
#130 class=overlap cmp=1 fine=2 mtv=11.2
#131 class=none cmp=0 fine=1 mtv=1.6360914409160614
#132 class=none cmp=0 fine=1 mtv=0
#133 class=none cmp=0 fine=1 mtv=0
#134 class=none cmp=0 fine=1 mtv=8.671207167208195
#135 class=overlap cmp=-1 fine=2 mtv=-3.530861574783927
#136 class=overlap cmp=-1 fine=-1 mtv=0
#137 class=overlap cmp=1 fine=1 mtv=-0.20000000000000284
#138 class=overlap cmp=-1 fine=-1 mtv=0.04999999999999716
#139 class=overlap cmp=-1 fine=2 mtv=-8.399999999999999
#140 class=none cmp=0 fine=1 mtv=23.14029896259308
#141 class=none cmp=0 fine=1 mtv=0.20000000000000284
#142 class=overlap cmp=-1 fine=-1 mtv=0.01999999999999602
#143 class=none cmp=0 fine=1 mtv=-1.871799685060978
#144 class=overlap cmp=-1 fine=2 mtv=-0.39118188917636587
#145 class=overlap cmp=-1 fine=-1 mtv=0.20000000000000284
#146 class=overlap cmp=1 fine=1 mtv=-0.05000000000001137
#147 class=overlap cmp=-1 fine=-1 mtv=0.05000000000000071
#148 class=overlap cmp=1 fine=2 mtv=11.2
#149 class=none cmp=0 fine=1 mtv=50.89998748898506
#150 class=adjacent cmp=-1 fine=1 mtv=0
#151 class=overlap cmp=-1 fine=-1 mtv=0.20000000000000284
#152 class=overlap cmp=-1 fine=-1 mtv=12.650491900742054
#153 class=overlap cmp=1 fine=1 mtv=0
#154 class=overlap cmp=-1 fine=-1 mtv=0.20000000000000284
#155 class=overlap cmp=1 fine=1 mtv=0
#156 class=overlap cmp=-1 fine=-1 mtv=0.1999999999999993
#157 class=overlap cmp=1 fine=2 mtv=11.2
#158 class=none cmp=0 fine=1 mtv=5.989919364452362
#159 class=none cmp=0 fine=1 mtv=0.20000000000000284
#160 class=overlap cmp=-1 fine=-1 mtv=0.01999999999999602
#161 class=overlap cmp=1 fine=1 mtv=-5.033223032951355
#162 class=overlap cmp=-1 fine=-1 mtv=0
#163 class=overlap cmp=-1 fine=-1 mtv=0
#164 class=overlap cmp=1 fine=1 mtv=-0.19999999999998863
#165 class=overlap cmp=-1 fine=-1 mtv=0
#166 class=overlap cmp=1 fine=2 mtv=11.199999999999996
#167 class=none cmp=0 fine=1 mtv=-8.306448608636856
#168 class=adjacent cmp=-1 fine=1 mtv=0
#169 class=overlap cmp=-1 fine=-1 mtv=0
#170 class=none cmp=0 fine=1 mtv=-4.963975749909878
#171 class=overlap cmp=1 fine=2 mtv=7.363610753044483
#172 class=overlap cmp=-1 fine=-1 mtv=0
#173 class=overlap cmp=1 fine=1 mtv=-0.1999999999999993
#174 class=overlap cmp=-1 fine=-1 mtv=0.1460411325097084
#175 class=overlap cmp=-1 fine=2 mtv=-5.599999999999994
#176 class=none cmp=0 fine=1 mtv=25.463606119155884
#177 class=none cmp=0 fine=1 mtv=0.1999999999999993
#178 class=overlap cmp=-1 fine=-1 mtv=0.20000000000000284
#179 class=none cmp=0 fine=1 mtv=-3.8128188028931618
#180 class=overlap cmp=1 fine=2 mtv=7.73569313175976
#181 class=overlap cmp=-1 fine=-1 mtv=0.04999999999999716
#182 class=none cmp=0 fine=1 mtv=-0.20000000000000284
#183 class=overlap cmp=-1 fine=-1 mtv=0.20000000000000284
#184 class=overlap cmp=-1 fine=2 mtv=-0.7000000000000028
#185 class=none cmp=0 fine=1 mtv=40.14533844590187
#186 class=none cmp=0 fine=1 mtv=-0.19999999999998863
#187 class=overlap cmp=-1 fine=-1 mtv=0
#188 class=none cmp=0 fine=-1 mtv=-13.003074996173382
#189 class=overlap cmp=-1 fine=2 mtv=-5.855638838466257
#190 class=overlap cmp=-1 fine=-1 mtv=0.04999999999999716
#191 class=overlap cmp=1 fine=1 mtv=-0.20000000000000284
#192 class=none cmp=0 fine=1 mtv=0
#193 class=overlap cmp=1 fine=1 mtv=0
#194 class=none cmp=0 fine=1 mtv=-12.810939967632294
#195 class=adjacent cmp=-1 fine=1 mtv=0.01999999999999602
#196 class=overlap cmp=-1 fine=-1 mtv=0.19999999999998863
#197 class=none cmp=0 fine=1 mtv=-31.747546017169952
#198 class=overlap cmp=1 fine=2 mtv=7.544117365777495
#199 class=overlap cmp=-1 fine=-1 mtv=0.1999999999999993
#200 class=overlap cmp=1 fine=1 mtv=-0.19999999999998863
#201 class=overlap cmp=-1 fine=-1 mtv=0.04999999999999716
#202 class=overlap cmp=1 fine=1 mtv=0
#203 class=none cmp=0 fine=1 mtv=13.390984028577805
#204 class=adjacent cmp=-1 fine=1 mtv=0
#205 class=overlap cmp=-1 fine=-1 mtv=0
#206 class=none cmp=0 fine=1 mtv=-5.524651229381561
#207 class=overlap cmp=-1 fine=2 mtv=-7.6414530903100975
#208 class=overlap cmp=-1 fine=-1 mtv=0
#209 class=overlap cmp=1 fine=1 mtv=-0.20000000000000284
#210 class=overlap cmp=-1 fine=-1 mtv=0.20000000000000284
#211 class=overlap cmp=-1 fine=2 mtv=-11.2
#212 class=none cmp=0 fine=1 mtv=-27.986047387123108
#213 class=adjacent cmp=-1 fine=1 mtv=0
#214 class=overlap cmp=-1 fine=-1 mtv=0.01999999999999602
#215 class=none cmp=0 fine=1 mtv=-53.66545329242945
#216 class=overlap cmp=-1 fine=2 mtv=-10.894127532094718
#217 class=overlap cmp=-1 fine=-1 mtv=0
#218 class=overlap cmp=1 fine=1 mtv=0
#219 class=overlap cmp=-1 fine=-1 mtv=0
#220 class=overlap cmp=-1 fine=2 mtv=-11.2
#221 class=none cmp=0 fine=1 mtv=8.952109843492508
#222 class=none cmp=0 fine=1 mtv=0
#223 class=none cmp=0 fine=1 mtv=0
#224 class=none cmp=0 fine=1 mtv=25.97353655844927
#225 class=overlap cmp=-1 fine=2 mtv=-3.2359755035489783
#226 class=overlap cmp=-1 fine=-1 mtv=0.19999999999998863
#227 class=overlap cmp=1 fine=1 mtv=0
#228 class=overlap cmp=-1 fine=-1 mtv=0.20000000000000284
#229 class=overlap cmp=1 fine=2 mtv=8.399999999999991
#230 class=none cmp=0 fine=1 mtv=22.916082322597504
#231 class=adjacent cmp=-1 fine=1 mtv=-0.019999999999999574
#232 class=overlap cmp=-1 fine=-1 mtv=0.20000000000000284
#233 class=none cmp=0 fine=1 mtv=10.224664561450481
#234 class=overlap cmp=-1 fine=2 mtv=-0.5903209342621274
#235 class=overlap cmp=-1 fine=-1 mtv=0.04999999999999716
#236 class=overlap cmp=1 fine=1 mtv=-0.05000000000001137
#237 class=overlap cmp=-1 fine=-1 mtv=0.1999999999999993
#238 class=overlap cmp=-1 fine=2 mtv=-11.2
#239 class=none cmp=0 fine=1 mtv=7.427730172872543
#240 class=adjacent cmp=-1 fine=1 mtv=-0.019999999999999574
#241 class=overlap cmp=-1 fine=-1 mtv=0
#242 class=none cmp=0 fine=1 mtv=18.41291218996048
#243 class=overlap cmp=1 fine=1 mtv=0
#244 class=overlap cmp=-1 fine=-1 mtv=0.20000000000000284
#245 class=overlap cmp=1 fine=1 mtv=0
#246 class=overlap cmp=-1 fine=-1 mtv=0
#247 class=overlap cmp=1 fine=2 mtv=11.2
#248 class=none cmp=0 fine=1 mtv=13.726030826568604
#249 class=none cmp=0 fine=1 mtv=0.1999999999999993
#250 class=overlap cmp=-1 fine=-1 mtv=0
#251 class=none cmp=0 fine=1 mtv=36.970138154923916
#252 class=overlap cmp=-1 fine=-1 mtv=0
#253 class=overlap cmp=-1 fine=-1 mtv=0.05000000000001137
#254 class=none cmp=0 fine=1 mtv=-0.20000000000000284
#255 class=overlap cmp=-1 fine=-1 mtv=0.05000000000001137
#256 class=overlap cmp=-1 fine=2 mtv=-11.2
#257 class=none cmp=0 fine=1 mtv=-8.501841872930527
#258 class=adjacent cmp=-1 fine=1 mtv=0.020000000000003126
#259 class=overlap cmp=-1 fine=-1 mtv=0
#260 class=none cmp=0 fine=-1 mtv=4.296085841953754
#261 class=overlap cmp=1 fine=2 mtv=6.4012495435774355
#262 class=overlap cmp=-1 fine=-1 mtv=0.04999999999999716
#263 class=overlap cmp=1 fine=1 mtv=0
#264 class=none cmp=0 fine=1 mtv=0.04999999999999716
#265 class=overlap cmp=-1 fine=2 mtv=-5.599999999999994
#266 class=none cmp=0 fine=1 mtv=-11.337680757045746
#267 class=none cmp=0 fine=1 mtv=0.20000000000000284
#268 class=overlap cmp=-1 fine=-1 mtv=0
#269 class=none cmp=0 fine=1 mtv=-1.875207133591175
#270 class=overlap cmp=-1 fine=2 mtv=-8.192867539077994
#271 class=overlap cmp=-1 fine=-1 mtv=0
#272 class=none cmp=0 fine=1 mtv=-0.19999999999998863
#273 class=none cmp=0 fine=1 mtv=0.20000000000000284
#274 class=overlap cmp=-1 fine=2 mtv=-0.6999999999999993
#275 class=none cmp=0 fine=1 mtv=62.24141189455986
#276 class=adjacent cmp=-1 fine=1 mtv=0
#277 class=overlap cmp=-1 fine=-1 mtv=0
#278 class=none cmp=0 fine=1 mtv=4.65025470405817
#279 class=overlap cmp=-1 fine=2 mtv=-3.703021181188518
#280 class=overlap cmp=-1 fine=-1 mtv=0
#281 class=overlap cmp=1 fine=1 mtv=0
#282 class=overlap cmp=-1 fine=-1 mtv=0.20000000000000284
#283 class=overlap cmp=1 fine=1 mtv=0
#284 class=none cmp=0 fine=1 mtv=-30.320935606956482
#285 class=adjacent cmp=-1 fine=1 mtv=0.01999999999999602
#286 class=overlap cmp=-1 fine=-1 mtv=0.19999999999998863
#287 class=none cmp=0 fine=1 mtv=-4.828468777239323
#288 class=overlap cmp=-1 fine=2 mtv=-8.264282214641568
#289 class=overlap cmp=-1 fine=-1 mtv=0
#290 class=overlap cmp=1 fine=1 mtv=-0.05000000000001137
#291 class=overlap cmp=-1 fine=-1 mtv=0
#292 class=overlap cmp=1 fine=1 mtv=0
#293 class=none cmp=0 fine=1 mtv=-10.237879008054733
#294 class=none cmp=0 fine=1 mtv=-0.19999999999998863
#295 class=overlap cmp=-1 fine=-1 mtv=0.19999999999998863
#296 class=none cmp=0 fine=-1 mtv=13.083514928817749
#297 class=overlap cmp=-1 fine=2 mtv=-7.2067578688263865
#298 class=overlap cmp=-1 fine=-1 mtv=0.20000000000000284
#299 class=overlap cmp=1 fine=1 mtv=-0.05000000000000071
#300 class=overlap cmp=-1 fine=-1 mtv=0.04999999999999716
#301 class=overlap cmp=-1 fine=2 mtv=-11.2
#302 class=none cmp=0 fine=1 mtv=-27.373864948749542
#303 class=none cmp=0 fine=1 mtv=0.20000000000000284
#304 class=overlap cmp=-1 fine=-1 mtv=0.20000000000000284
#305 class=none cmp=0 fine=1 mtv=-4.85050094127655
#306 class=overlap cmp=-1 fine=2 mtv=-12.40053642466664
#307 class=overlap cmp=-1 fine=-1 mtv=0
#308 class=overlap cmp=1 fine=1 mtv=-0.19999999999998863
#309 class=overlap cmp=-1 fine=-1 mtv=0
#310 class=overlap cmp=1 fine=2 mtv=11.2
#311 class=none cmp=0 fine=1 mtv=-4.867067486047745
#312 class=none cmp=0 fine=1 mtv=0
#313 class=none cmp=0 fine=1 mtv=0
#314 class=none cmp=0 fine=-1 mtv=31.33534613996744
#315 class=overlap cmp=-1 fine=2 mtv=-4.228059749677776
#316 class=overlap cmp=-1 fine=-1 mtv=0.05000000000001137
#317 class=overlap cmp=1 fine=1 mtv=-0.20000000000000284
#318 class=overlap cmp=-1 fine=-1 mtv=0.20000000000000284
#319 class=overlap cmp=1 fine=2 mtv=8.399999999999991
#320 class=none cmp=0 fine=1 mtv=13.221808195114136
#321 class=adjacent cmp=0 fine=1 mtv=0
#322 class=overlap cmp=-1 fine=-1 mtv=0.01999999999999602
#323 class=none cmp=0 fine=-1 mtv=-6.790942311286926"
`;

exports[`pinned draw-order decisions at camera angle (+0,1) 1`] = `
"#000 class=overlap cmp=-1 fine=2 mtv=-3.6043490290641813
#001 class=overlap cmp=1 fine=1 mtv=-0.05000000000000071
#002 class=none cmp=0 fine=-1 mtv=0.19999999999998863
#003 class=overlap cmp=-1 fine=-1 mtv=0.20000000000000284
#004 class=overlap cmp=-1 fine=2 mtv=-0.7000000000000028
#005 class=none cmp=0 fine=-1 mtv=-59.99699708819389
#006 class=overlap cmp=-1 fine=-1 mtv=0.019999999999999574
#007 class=none cmp=0 fine=1 mtv=0.20000000000000284
#008 class=none cmp=0 fine=-1 mtv=-11.512313418090343
#009 class=overlap cmp=-1 fine=2 mtv=-4.83433160595596
#010 class=overlap cmp=1 fine=1 mtv=-0.1999999999999993
#011 class=overlap cmp=-1 fine=-1 mtv=0.04999999999999716
#012 class=overlap cmp=-1 fine=-1 mtv=0
#013 class=overlap cmp=1 fine=1 mtv=0
#014 class=none cmp=0 fine=-1 mtv=-21.608393490314484
#015 class=overlap cmp=-1 fine=-1 mtv=0
#016 class=adjacent cmp=0 fine=1 mtv=0
#017 class=none cmp=0 fine=-1 mtv=-3.4164941385388374
#018 class=overlap cmp=-1 fine=2 mtv=-5.285718924552203
#019 class=overlap cmp=1 fine=1 mtv=0
#020 class=overlap cmp=-1 fine=-1 mtv=0.1999999999999993
#021 class=overlap cmp=-1 fine=-1 mtv=0
#022 class=overlap cmp=1 fine=1 mtv=0
#023 class=none cmp=0 fine=-1 mtv=2.7593582570552826
#024 class=overlap cmp=-1 fine=-1 mtv=0
#025 class=adjacent cmp=-1 fine=1 mtv=0
#026 class=overlap cmp=-1 fine=2 mtv=-8.879172883927822
#027 class=overlap cmp=-1 fine=2 mtv=-4.92371787428856
#028 class=overlap cmp=1 fine=1 mtv=-0.04999999999999716
#029 class=overlap cmp=-1 fine=-1 mtv=0.20000000000000284
#030 class=overlap cmp=-1 fine=-1 mtv=0
#031 class=overlap cmp=-1 fine=2 mtv=-11.2
#032 class=none cmp=0 fine=-1 mtv=17.728658437728882
#033 class=overlap cmp=-1 fine=-1 mtv=0.20000000000000284
#034 class=none cmp=0 fine=1 mtv=-0.1999999999999993
#035 class=none cmp=0 fine=-1 mtv=-27.038332022726536
#036 class=overlap cmp=-1 fine=2 mtv=-9.692286848276854
#037 class=overlap cmp=1 fine=1 mtv=-0.20000000000000284
#038 class=overlap cmp=-1 fine=-1 mtv=0.19999999999998863
#039 class=overlap cmp=-1 fine=-1 mtv=0.05000000000000071
#040 class=overlap cmp=-1 fine=2 mtv=-11.199999999999996
#041 class=none cmp=0 fine=-1 mtv=22.140611559152603
#042 class=none cmp=0 fine=-1 mtv=0
#043 class=none cmp=0 fine=-1 mtv=0
#044 class=none cmp=0 fine=-1 mtv=-18.346651136875153
#045 class=overlap cmp=1 fine=2 mtv=2.91135249249637
#046 class=overlap cmp=1 fine=1 mtv=-0.19999999999998863
#047 class=overlap cmp=-1 fine=-1 mtv=0.20000000000000284
#048 class=overlap cmp=-1 fine=-1 mtv=0
#049 class=overlap cmp=-1 fine=2 mtv=-8.399999999999991
#050 class=none cmp=0 fine=-1 mtv=10.626925766468048
#051 class=overlap cmp=-1 fine=-1 mtv=0
#052 class=adjacent cmp=-1 fine=1 mtv=0.01999999999999602
#053 class=none cmp=0 fine=1 mtv=-12.28047239780426
#054 class=overlap cmp=1 fine=2 mtv=0.530546286795289
#055 class=overlap cmp=1 fine=1 mtv=-0.04999999999999716
#056 class=overlap cmp=-1 fine=-1 mtv=0
#057 class=overlap cmp=-1 fine=-1 mtv=0.04999999999999716
#058 class=overlap cmp=1 fine=2 mtv=11.199999999999996
#059 class=none cmp=0 fine=-1 mtv=5.585132569074631
#060 class=overlap cmp=-1 fine=-1 mtv=0.01999999999999602
#061 class=none cmp=0 fine=1 mtv=-0.19999999999998863
#062 class=none cmp=0 fine=1 mtv=-1.2673158645629883
#063 class=overlap cmp=-1 fine=-1 mtv=0
#064 class=overlap cmp=1 fine=1 mtv=-0.04999999999999982
#065 class=overlap cmp=-1 fine=-1 mtv=0
#066 class=overlap cmp=-1 fine=-1 mtv=0.04999999999999716
#067 class=overlap cmp=1 fine=2 mtv=11.199999999999996
#068 class=none cmp=0 fine=-1 mtv=11.408689379692078
#069 class=overlap cmp=-1 fine=-1 mtv=0.020000000000003126
#070 class=adjacent cmp=-1 fine=1 mtv=0
#071 class=none cmp=0 fine=-1 mtv=38.439699076116085
#072 class=overlap cmp=1 fine=1 mtv=0
#073 class=overlap cmp=1 fine=1 mtv=-0.19999999999998863
#074 class=overlap cmp=-1 fine=-1 mtv=0.20000000000000284
#075 class=overlap cmp=-1 fine=-1 mtv=0.20000000000000284
#076 class=overlap cmp=1 fine=2 mtv=11.199999999999996
#077 class=none cmp=0 fine=-1 mtv=-9.363972634077072
#078 class=overlap cmp=-1 fine=-1 mtv=0.19999999999998863
#079 class=adjacent cmp=-1 fine=1 mtv=-0.01999999999999602
#080 class=none cmp=0 fine=-1 mtv=14.608170814812183
#081 class=overlap cmp=1 fine=2 mtv=5.240669309347865
#082 class=overlap cmp=1 fine=1 mtv=-0.19999999999999996
#083 class=overlap cmp=-1 fine=-1 mtv=0.20000000000000284
#084 class=overlap cmp=-1 fine=-1 mtv=0.04999999999999716
#085 class=overlap cmp=1 fine=2 mtv=5.599999999999994
#086 class=none cmp=0 fine=-1 mtv=-28.004892885684967
#087 class=overlap cmp=-1 fine=-1 mtv=0
#088 class=none cmp=0 fine=1 mtv=0.20000000000000284
#089 class=none cmp=0 fine=1 mtv=-25.24035442620516
#090 class=overlap cmp=-1 fine=2 mtv=-6.169690353050829
#091 class=overlap cmp=1 fine=1 mtv=-0.20000000000000284
#092 class=overlap cmp=-1 fine=-1 mtv=0.19999999999998863
#093 class=overlap cmp=-1 fine=-1 mtv=0.04999999999999716
#094 class=overlap cmp=1 fine=2 mtv=0.7
#095 class=none cmp=0 fine=-1 mtv=61.13254460692406
#096 class=overlap cmp=-1 fine=-1 mtv=0.019999999999999574
#097 class=adjacent cmp=-1 fine=1 mtv=-0.01999999999999602
#098 class=none cmp=0 fine=-1 mtv=-2.0401914715766907
#099 class=overlap cmp=-1 fine=2 mtv=-3.7048930138349547
#100 class=overlap cmp=1 fine=1 mtv=0
#101 class=overlap cmp=-1 fine=-1 mtv=0.04999999999999716
#102 class=none cmp=0 fine=1 mtv=0
#103 class=overlap cmp=1 fine=1 mtv=0
#104 class=none cmp=0 fine=-1 mtv=-15.871129989624023
#105 class=overlap cmp=-1 fine=-1 mtv=0.1999999999999993
#106 class=adjacent cmp=-1 fine=1 mtv=0.020000000000003126
#107 class=none cmp=0 fine=-1 mtv=3.4979971274733543
#108 class=overlap cmp=-1 fine=2 mtv=-5.408003418892623
#109 class=overlap cmp=1 fine=1 mtv=-0.1999999999999993
#110 class=overlap cmp=-1 fine=-1 mtv=0.04999999999999716
#111 class=overlap cmp=-1 fine=-1 mtv=0.20000000000000284
#112 class=overlap cmp=1 fine=1 mtv=0
#113 class=none cmp=0 fine=-1 mtv=-24.28601822257042
#114 class=overlap cmp=-1 fine=-1 mtv=0
#115 class=adjacent cmp=-1 fine=1 mtv=0
#116 class=none cmp=0 fine=1 mtv=39.054399251937866
#117 class=overlap cmp=-1 fine=2 mtv=-4.807039917632935
#118 class=overlap cmp=1 fine=1 mtv=0
#119 class=overlap cmp=-1 fine=-1 mtv=0
#120 class=overlap cmp=-1 fine=-1 mtv=0.1999999999999993
#121 class=overlap cmp=-1 fine=2 mtv=-11.2
#122 class=none cmp=0 fine=-1 mtv=-43.59064143896103
#123 class=overlap cmp=-1 fine=-1 mtv=0.01999999999999602
#124 class=adjacent cmp=-1 fine=1 mtv=0
#125 class=none cmp=0 fine=-1 mtv=16.64314942806959
#126 class=overlap cmp=-1 fine=2 mtv=-4.9638985015451915
#127 class=overlap cmp=1 fine=1 mtv=0
#128 class=overlap cmp=-1 fine=-1 mtv=0.20000000000000284
#129 class=overlap cmp=-1 fine=-1 mtv=0.05000000000000071
#130 class=overlap cmp=1 fine=2 mtv=11.2
#131 class=none cmp=0 fine=-1 mtv=1.6360914409160614
#132 class=none cmp=0 fine=-1 mtv=0
#133 class=none cmp=0 fine=-1 mtv=0
#134 class=none cmp=0 fine=-1 mtv=8.671207167208195
#135 class=overlap cmp=1 fine=2 mtv=3.530861574783927
#136 class=overlap cmp=1 fine=1 mtv=0
#137 class=overlap cmp=-1 fine=-1 mtv=0.20000000000000284
#138 class=none cmp=0 fine=1 mtv=0.04999999999999716
#139 class=overlap cmp=1 fine=2 mtv=8.399999999999999
#140 class=none cmp=0 fine=-1 mtv=23.14029896259308
#141 class=overlap cmp=-1 fine=-1 mtv=0.20000000000000284
#142 class=adjacent cmp=-1 fine=1 mtv=0.01999999999999602
#143 class=overlap cmp=-1 fine=-1 mtv=-1.871799685060978
#144 class=overlap cmp=1 fine=2 mtv=0.39118188917636587
#145 class=overlap cmp=1 fine=1 mtv=-0.20000000000000284
#146 class=overlap cmp=-1 fine=-1 mtv=0.05000000000001137
#147 class=overlap cmp=-1 fine=-1 mtv=0.05000000000000071
#148 class=overlap cmp=1 fine=2 mtv=11.2
#149 class=none cmp=0 fine=-1 mtv=50.89998748898506
#150 class=overlap cmp=-1 fine=-1 mtv=0
#151 class=none cmp=0 fine=1 mtv=0.20000000000000284
#152 class=none cmp=0 fine=1 mtv=12.650491900742054
#153 class=overlap cmp=-1 fine=-1 mtv=0
#154 class=overlap cmp=1 fine=1 mtv=-0.20000000000000284
#155 class=overlap cmp=-1 fine=-1 mtv=0
#156 class=overlap cmp=-1 fine=-1 mtv=0.1999999999999993
#157 class=overlap cmp=1 fine=2 mtv=11.2
#158 class=none cmp=0 fine=-1 mtv=5.989919364452362
#159 class=overlap cmp=-1 fine=-1 mtv=0.20000000000000284
#160 class=adjacent cmp=-1 fine=1 mtv=-0.01999999999999602
#161 class=overlap cmp=-1 fine=-1 mtv=5.033223032951355
#162 class=overlap cmp=1 fine=1 mtv=0
#163 class=overlap cmp=1 fine=1 mtv=0
#164 class=overlap cmp=-1 fine=-1 mtv=0.19999999999998863
#165 class=overlap cmp=-1 fine=-1 mtv=0
#166 class=overlap cmp=1 fine=2 mtv=11.199999999999996
#167 class=none cmp=0 fine=-1 mtv=-8.306448608636856
#168 class=overlap cmp=-1 fine=-1 mtv=0
#169 class=adjacent cmp=-1 fine=1 mtv=0
#170 class=none cmp=0 fine=-1 mtv=-4.963975749909878
#171 class=overlap cmp=-1 fine=2 mtv=-7.363610753044483
#172 class=overlap cmp=1 fine=1 mtv=0
#173 class=overlap cmp=-1 fine=-1 mtv=0.1999999999999993
#174 class=none cmp=0 fine=1 mtv=-0.1460411325097084
#175 class=overlap cmp=1 fine=2 mtv=5.599999999999994
#176 class=none cmp=0 fine=-1 mtv=25.463606119155884
#177 class=overlap cmp=-1 fine=-1 mtv=0.1999999999999993
#178 class=none cmp=0 fine=1 mtv=0.20000000000000284
#179 class=none cmp=0 fine=-1 mtv=-3.8128188028931618
#180 class=overlap cmp=-1 fine=2 mtv=-7.73569313175976
#181 class=overlap cmp=1 fine=1 mtv=-0.04999999999999716
#182 class=none cmp=0 fine=-1 mtv=0.20000000000000284
#183 class=overlap cmp=-1 fine=-1 mtv=0.20000000000000284
#184 class=overlap cmp=-1 fine=2 mtv=-0.7000000000000028
#185 class=none cmp=0 fine=-1 mtv=40.14533844590187
#186 class=overlap cmp=-1 fine=-1 mtv=0.19999999999998863
#187 class=adjacent cmp=0 fine=1 mtv=0
#188 class=none cmp=0 fine=1 mtv=-13.003074996173382
#189 class=overlap cmp=1 fine=2 mtv=5.855638838466257
#190 class=overlap cmp=1 fine=1 mtv=-0.04999999999999716
#191 class=overlap cmp=-1 fine=-1 mtv=0.20000000000000284
#192 class=overlap cmp=-1 fine=-1 mtv=0
#193 class=overlap cmp=1 fine=1 mtv=0
#194 class=none cmp=0 fine=-1 mtv=-12.810939967632294
#195 class=overlap cmp=-1 fine=-1 mtv=0.01999999999999602
#196 class=none cmp=0 fine=1 mtv=-0.19999999999998863
#197 class=overlap cmp=-1 fine=-1 mtv=31.747546017169952
#198 class=overlap cmp=-1 fine=2 mtv=-7.544117365777495
#199 class=overlap cmp=1 fine=1 mtv=-0.1999999999999993
#200 class=overlap cmp=-1 fine=-1 mtv=0.19999999999998863
#201 class=overlap cmp=-1 fine=-1 mtv=0.04999999999999716
#202 class=overlap cmp=1 fine=1 mtv=0
#203 class=none cmp=0 fine=-1 mtv=13.390984028577805
#204 class=overlap cmp=-1 fine=-1 mtv=0
#205 class=adjacent cmp=-1 fine=1 mtv=0
#206 class=none cmp=0 fine=-1 mtv=5.524651229381561
#207 class=overlap cmp=-1 fine=2 mtv=-7.6414530903100975
#208 class=overlap cmp=1 fine=1 mtv=0
#209 class=overlap cmp=-1 fine=-1 mtv=0.20000000000000284
#210 class=overlap cmp=-1 fine=-1 mtv=0.20000000000000284
#211 class=overlap cmp=1 fine=2 mtv=11.2
#212 class=none cmp=0 fine=-1 mtv=-27.986047387123108
#213 class=overlap cmp=-1 fine=-1 mtv=0
#214 class=adjacent cmp=-1 fine=1 mtv=0.01999999999999602
#215 class=none cmp=0 fine=-1 mtv=-53.66545329242945
#216 class=overlap cmp=-1 fine=2 mtv=-10.894127532094718
#217 class=overlap cmp=1 fine=1 mtv=0
#218 class=overlap cmp=-1 fine=-1 mtv=0
#219 class=overlap cmp=-1 fine=-1 mtv=0
#220 class=overlap cmp=-1 fine=2 mtv=-11.2
#221 class=none cmp=0 fine=-1 mtv=8.952109843492508
#222 class=none cmp=0 fine=-1 mtv=0
#223 class=none cmp=0 fine=-1 mtv=0
#224 class=none cmp=0 fine=-1 mtv=25.97353655844927
#225 class=overlap cmp=1 fine=2 mtv=3.2359755035489783
#226 class=overlap cmp=1 fine=1 mtv=-0.19999999999998863
#227 class=overlap cmp=-1 fine=-1 mtv=0
#228 class=overlap cmp=-1 fine=-1 mtv=0.20000000000000284
#229 class=overlap cmp=-1 fine=2 mtv=-8.399999999999991
#230 class=none cmp=0 fine=-1 mtv=22.916082322597504
#231 class=overlap cmp=-1 fine=-1 mtv=0.019999999999999574
#232 class=none cmp=0 fine=1 mtv=0.20000000000000284
#233 class=none cmp=0 fine=-1 mtv=10.224664561450481
#234 class=overlap cmp=1 fine=2 mtv=0.5903209342621274
#235 class=overlap cmp=1 fine=1 mtv=-0.04999999999999716
#236 class=overlap cmp=-1 fine=-1 mtv=0.05000000000001137
#237 class=none cmp=0 fine=1 mtv=0.1999999999999993
#238 class=overlap cmp=-1 fine=2 mtv=-11.2
#239 class=none cmp=0 fine=-1 mtv=7.427730172872543
#240 class=overlap cmp=-1 fine=-1 mtv=0.019999999999999574
#241 class=adjacent cmp=-1 fine=1 mtv=0
#242 class=none cmp=0 fine=-1 mtv=-18.41291218996048
#243 class=overlap cmp=-1 fine=-1 mtv=0
#244 class=overlap cmp=1 fine=1 mtv=-0.20000000000000284
#245 class=overlap cmp=-1 fine=-1 mtv=0
#246 class=overlap cmp=-1 fine=-1 mtv=0
#247 class=overlap cmp=1 fine=2 mtv=11.2
#248 class=none cmp=0 fine=-1 mtv=13.726030826568604
#249 class=overlap cmp=-1 fine=-1 mtv=0.1999999999999993
#250 class=adjacent cmp=-1 fine=1 mtv=0
#251 class=none cmp=0 fine=-1 mtv=36.970138154923916
#252 class=overlap cmp=1 fine=1 mtv=0
#253 class=overlap cmp=1 fine=1 mtv=-0.05000000000001137
#254 class=none cmp=0 fine=-1 mtv=0.20000000000000284
#255 class=overlap cmp=-1 fine=-1 mtv=0.05000000000001137
#256 class=overlap cmp=-1 fine=2 mtv=-11.2
#257 class=none cmp=0 fine=-1 mtv=-8.501841872930527
#258 class=overlap cmp=-1 fine=-1 mtv=0.020000000000003126
#259 class=adjacent cmp=-1 fine=1 mtv=0
#260 class=none cmp=0 fine=1 mtv=4.296085841953754
#261 class=overlap cmp=-1 fine=2 mtv=-6.4012495435774355
#262 class=overlap cmp=1 fine=1 mtv=-0.04999999999999716
#263 class=overlap cmp=-1 fine=-1 mtv=0
#264 class=overlap cmp=-1 fine=-1 mtv=0.04999999999999716
#265 class=overlap cmp=1 fine=2 mtv=5.599999999999994
#266 class=none cmp=0 fine=-1 mtv=-11.337680757045746
#267 class=overlap cmp=-1 fine=-1 mtv=0.20000000000000284
#268 class=adjacent cmp=-1 fine=1 mtv=0
#269 class=none cmp=0 fine=-1 mtv=-1.875207133591175
#270 class=overlap cmp=-1 fine=2 mtv=-8.192867539077994
#271 class=overlap cmp=1 fine=1 mtv=0
#272 class=none cmp=0 fine=-1 mtv=0.19999999999998863
#273 class=overlap cmp=-1 fine=-1 mtv=0.20000000000000284
#274 class=overlap cmp=-1 fine=2 mtv=-0.6999999999999993
#275 class=none cmp=0 fine=-1 mtv=62.24141189455986
#276 class=overlap cmp=-1 fine=-1 mtv=0
#277 class=adjacent cmp=-1 fine=1 mtv=0
#278 class=none cmp=0 fine=-1 mtv=4.65025470405817
#279 class=overlap cmp=1 fine=2 mtv=3.703021181188518
#280 class=overlap cmp=1 fine=1 mtv=0
#281 class=overlap cmp=-1 fine=-1 mtv=0
#282 class=none cmp=0 fine=1 mtv=0.20000000000000284
#283 class=overlap cmp=1 fine=1 mtv=0
#284 class=none cmp=0 fine=-1 mtv=-30.320935606956482
#285 class=overlap cmp=-1 fine=-1 mtv=0.01999999999999602
#286 class=none cmp=0 fine=1 mtv=-0.19999999999998863
#287 class=none cmp=0 fine=-1 mtv=-4.828468777239323
#288 class=overlap cmp=1 fine=2 mtv=8.264282214641568
#289 class=overlap cmp=1 fine=1 mtv=0
#290 class=overlap cmp=-1 fine=-1 mtv=0.05000000000001137
#291 class=overlap cmp=-1 fine=-1 mtv=0
#292 class=overlap cmp=1 fine=1 mtv=0
#293 class=none cmp=0 fine=-1 mtv=-10.237879008054733
#294 class=overlap cmp=-1 fine=-1 mtv=0.19999999999998863
#295 class=none cmp=0 fine=1 mtv=0.19999999999998863
#296 class=overlap cmp=-1 fine=-1 mtv=-13.083514928817749
#297 class=overlap cmp=-1 fine=2 mtv=-7.2067578688263865
#298 class=overlap cmp=1 fine=1 mtv=-0.20000000000000284
#299 class=overlap cmp=-1 fine=-1 mtv=0.05000000000000071
#300 class=overlap cmp=-1 fine=-1 mtv=0.04999999999999716
#301 class=overlap cmp=1 fine=2 mtv=11.2
#302 class=none cmp=0 fine=-1 mtv=-27.373864948749542
#303 class=overlap cmp=-1 fine=-1 mtv=0.20000000000000284
#304 class=none cmp=0 fine=1 mtv=0.20000000000000284
#305 class=none cmp=0 fine=-1 mtv=4.85050094127655
#306 class=overlap cmp=-1 fine=2 mtv=-12.40053642466664
#307 class=overlap cmp=1 fine=1 mtv=0
#308 class=overlap cmp=-1 fine=-1 mtv=0.19999999999998863
#309 class=overlap cmp=-1 fine=-1 mtv=0
#310 class=overlap cmp=1 fine=2 mtv=11.2
#311 class=none cmp=0 fine=-1 mtv=-4.867067486047745
#312 class=none cmp=0 fine=-1 mtv=0
#313 class=none cmp=0 fine=-1 mtv=0
#314 class=none cmp=0 fine=1 mtv=31.33534613996744
#315 class=overlap cmp=1 fine=2 mtv=4.228059749677776
#316 class=overlap cmp=1 fine=1 mtv=-0.05000000000001137
#317 class=overlap cmp=-1 fine=-1 mtv=0.20000000000000284
#318 class=overlap cmp=-1 fine=-1 mtv=0.20000000000000284
#319 class=overlap cmp=-1 fine=2 mtv=-8.399999999999991
#320 class=none cmp=0 fine=-1 mtv=13.221808195114136
#321 class=overlap cmp=-1 fine=-1 mtv=0
#322 class=adjacent cmp=-1 fine=1 mtv=0.01999999999999602
#323 class=none cmp=0 fine=1 mtv=6.790942311286926"
`;

exports[`pinned draw-order decisions at camera angle (-1,+0) 1`] = `
"#000 class=overlap cmp=1 fine=2 mtv=3.6043490290641813
#001 class=overlap cmp=-1 fine=-1 mtv=0.05000000000000071
#002 class=overlap cmp=-1 fine=-1 mtv=0.19999999999998863
#003 class=overlap cmp=-1 fine=-1 mtv=0.20000000000000284
#004 class=overlap cmp=-1 fine=2 mtv=-0.7000000000000028
#005 class=none cmp=0 fine=-1 mtv=-59.99699708819389
#006 class=overlap cmp=-1 fine=-1 mtv=0.019999999999999574
#007 class=overlap cmp=-1 fine=-1 mtv=0.20000000000000284
#008 class=none cmp=0 fine=1 mtv=-11.512313418090343
#009 class=overlap cmp=-1 fine=2 mtv=-4.83433160595596
#010 class=overlap cmp=-1 fine=-1 mtv=0.1999999999999993
#011 class=overlap cmp=-1 fine=-1 mtv=0.04999999999999716
#012 class=overlap cmp=-1 fine=-1 mtv=0
#013 class=overlap cmp=1 fine=1 mtv=0
#014 class=none cmp=0 fine=-1 mtv=-21.608393490314484
#015 class=overlap cmp=-1 fine=-1 mtv=0
#016 class=overlap cmp=-1 fine=-1 mtv=0
#017 class=none cmp=0 fine=-1 mtv=-3.4164941385388374
#018 class=overlap cmp=-1 fine=2 mtv=-5.285718924552203
#019 class=overlap cmp=-1 fine=-1 mtv=0
#020 class=overlap cmp=-1 fine=-1 mtv=0.1999999999999993
#021 class=overlap cmp=-1 fine=-1 mtv=0
#022 class=overlap cmp=1 fine=1 mtv=0
#023 class=none cmp=0 fine=-1 mtv=2.7593582570552826
#024 class=overlap cmp=-1 fine=-1 mtv=0
#025 class=overlap cmp=-1 fine=-1 mtv=0
#026 class=overlap cmp=-1 fine=2 mtv=-8.879172883927822
#027 class=overlap cmp=-1 fine=2 mtv=-4.92371787428856
#028 class=overlap cmp=-1 fine=-1 mtv=0.04999999999999716
#029 class=overlap cmp=-1 fine=-1 mtv=0.20000000000000284
#030 class=overlap cmp=-1 fine=-1 mtv=0
#031 class=overlap cmp=-1 fine=2 mtv=-11.2
#032 class=none cmp=0 fine=-1 mtv=17.728658437728882
#033 class=overlap cmp=-1 fine=-1 mtv=0.20000000000000284
#034 class=overlap cmp=-1 fine=-1 mtv=0.1999999999999993
#035 class=none cmp=0 fine=-1 mtv=-27.038332022726536
#036 class=overlap cmp=-1 fine=2 mtv=-9.692286848276854
#037 class=overlap cmp=-1 fine=-1 mtv=0.20000000000000284
#038 class=overlap cmp=-1 fine=-1 mtv=0.19999999999998863
#039 class=overlap cmp=-1 fine=-1 mtv=0.05000000000000071
#040 class=overlap cmp=1 fine=2 mtv=11.199999999999996
#041 class=none cmp=0 fine=-1 mtv=22.140611559152603
#042 class=overlap cmp=-1 fine=-1 mtv=0
#043 class=overlap cmp=-1 fine=-1 mtv=0
#044 class=none cmp=0 fine=-1 mtv=18.346651136875153
#045 class=overlap cmp=-1 fine=2 mtv=-2.91135249249637
#046 class=overlap cmp=-1 fine=-1 mtv=0.19999999999998863
#047 class=overlap cmp=-1 fine=-1 mtv=0.20000000000000284
#048 class=none cmp=0 fine=1 mtv=0
#049 class=overlap cmp=1 fine=2 mtv=8.399999999999991
#050 class=none cmp=0 fine=-1 mtv=10.626925766468048
#051 class=overlap cmp=-1 fine=-1 mtv=0
#052 class=overlap cmp=-1 fine=-1 mtv=0.01999999999999602
#053 class=none cmp=0 fine=-1 mtv=-12.28047239780426
#054 class=overlap cmp=-1 fine=2 mtv=-0.530546286795289
#055 class=overlap cmp=-1 fine=-1 mtv=0.04999999999999716
#056 class=overlap cmp=-1 fine=-1 mtv=0
#057 class=overlap cmp=-1 fine=-1 mtv=0.04999999999999716
#058 class=overlap cmp=1 fine=2 mtv=11.199999999999996
#059 class=none cmp=0 fine=-1 mtv=5.585132569074631
#060 class=overlap cmp=-1 fine=-1 mtv=0.01999999999999602
#061 class=overlap cmp=-1 fine=-1 mtv=0.19999999999998863
#062 class=none cmp=0 fine=-1 mtv=-1.2673158645629883
#063 class=overlap cmp=-1 fine=-1 mtv=0
#064 class=overlap cmp=-1 fine=-1 mtv=0.04999999999999982
#065 class=overlap cmp=-1 fine=-1 mtv=0
#066 class=overlap cmp=-1 fine=-1 mtv=0.04999999999999716
#067 class=overlap cmp=1 fine=2 mtv=11.199999999999996
#068 class=none cmp=0 fine=-1 mtv=11.408689379692078
#069 class=overlap cmp=-1 fine=-1 mtv=0.020000000000003126
#070 class=overlap cmp=-1 fine=-1 mtv=0
#071 class=none cmp=0 fine=-1 mtv=38.439699076116085
#072 class=overlap cmp=-1 fine=-1 mtv=0
#073 class=overlap cmp=-1 fine=-1 mtv=0.19999999999998863
#074 class=none cmp=0 fine=1 mtv=0.20000000000000284
#075 class=overlap cmp=-1 fine=-1 mtv=0.20000000000000284
#076 class=overlap cmp=1 fine=2 mtv=11.199999999999996
#077 class=none cmp=0 fine=-1 mtv=-9.363972634077072
#078 class=overlap cmp=-1 fine=-1 mtv=0.19999999999998863
#079 class=overlap cmp=-1 fine=-1 mtv=0.01999999999999602
#080 class=none cmp=0 fine=-1 mtv=14.608170814812183
#081 class=overlap cmp=-1 fine=2 mtv=-5.240669309347865
#082 class=overlap cmp=-1 fine=-1 mtv=0.19999999999999996
#083 class=overlap cmp=-1 fine=-1 mtv=0.20000000000000284
#084 class=overlap cmp=-1 fine=-1 mtv=0.04999999999999716
#085 class=overlap cmp=-1 fine=2 mtv=-5.599999999999994
#086 class=none cmp=0 fine=-1 mtv=-28.004892885684967
#087 class=overlap cmp=-1 fine=-1 mtv=0
#088 class=overlap cmp=-1 fine=-1 mtv=0.20000000000000284
#089 class=none cmp=0 fine=-1 mtv=-25.24035442620516
#090 class=overlap cmp=-1 fine=2 mtv=-6.169690353050829
#091 class=overlap cmp=-1 fine=-1 mtv=0.20000000000000284
#092 class=overlap cmp=-1 fine=-1 mtv=0.19999999999998863
#093 class=overlap cmp=-1 fine=-1 mtv=0.04999999999999716
#094 class=overlap cmp=-1 fine=2 mtv=-0.7
#095 class=none cmp=0 fine=-1 mtv=61.13254460692406
#096 class=overlap cmp=-1 fine=-1 mtv=0.019999999999999574
#097 class=overlap cmp=-1 fine=-1 mtv=0.01999999999999602
#098 class=none cmp=0 fine=-1 mtv=2.0401914715766907
#099 class=overlap cmp=-1 fine=2 mtv=-3.7048930138349547
#100 class=overlap cmp=-1 fine=-1 mtv=0
#101 class=overlap cmp=-1 fine=-1 mtv=0.04999999999999716
#102 class=overlap cmp=-1 fine=-1 mtv=0
#103 class=overlap cmp=1 fine=1 mtv=0
#104 class=none cmp=0 fine=-1 mtv=-15.871129989624023
#105 class=overlap cmp=-1 fine=-1 mtv=0.1999999999999993
#106 class=overlap cmp=-1 fine=-1 mtv=0.020000000000003126
#107 class=none cmp=0 fine=-1 mtv=3.4979971274733543
#108 class=overlap cmp=-1 fine=2 mtv=-5.408003418892623
#109 class=overlap cmp=-1 fine=-1 mtv=0.1999999999999993
#110 class=overlap cmp=-1 fine=-1 mtv=0.04999999999999716
#111 class=overlap cmp=-1 fine=-1 mtv=0.20000000000000284
#112 class=overlap cmp=1 fine=1 mtv=0
#113 class=none cmp=0 fine=-1 mtv=-24.28601822257042
#114 class=overlap cmp=-1 fine=-1 mtv=0
#115 class=overlap cmp=-1 fine=-1 mtv=0
#116 class=none cmp=0 fine=-1 mtv=39.054399251937866
#117 class=overlap cmp=-1 fine=2 mtv=-4.807039917632935
#118 class=overlap cmp=-1 fine=-1 mtv=0
#119 class=overlap cmp=-1 fine=-1 mtv=0
#120 class=overlap cmp=-1 fine=-1 mtv=0.1999999999999993
#121 class=overlap cmp=-1 fine=2 mtv=-11.2
#122 class=none cmp=0 fine=-1 mtv=-43.59064143896103
#123 class=overlap cmp=-1 fine=-1 mtv=0.01999999999999602
#124 class=overlap cmp=-1 fine=-1 mtv=0
#125 class=none cmp=0 fine=-1 mtv=16.64314942806959
#126 class=overlap cmp=-1 fine=2 mtv=-4.9638985015451915
#127 class=overlap cmp=-1 fine=-1 mtv=0
#128 class=overlap cmp=-1 fine=-1 mtv=0.20000000000000284
#129 class=overlap cmp=-1 fine=-1 mtv=0.05000000000000071
#130 class=overlap cmp=1 fine=2 mtv=11.2
#131 class=none cmp=0 fine=-1 mtv=1.6360914409160614
#132 class=none cmp=0 fine=1 mtv=0
#133 class=overlap cmp=-1 fine=-1 mtv=0
#134 class=overlap cmp=-1 fine=-1 mtv=8.671207167208195
#135 class=overlap cmp=-1 fine=2 mtv=-3.530861574783927
#136 class=overlap cmp=-1 fine=-1 mtv=0
#137 class=overlap cmp=-1 fine=-1 mtv=0.20000000000000284
#138 class=none cmp=0 fine=1 mtv=0.04999999999999716
#139 class=overlap cmp=-1 fine=2 mtv=-8.399999999999999
#140 class=none cmp=0 fine=-1 mtv=23.14029896259308
#141 class=overlap cmp=-1 fine=-1 mtv=0.20000000000000284
#142 class=overlap cmp=-1 fine=-1 mtv=0.01999999999999602
#143 class=overlap cmp=-1 fine=-1 mtv=-1.871799685060978
#144 class=overlap cmp=-1 fine=2 mtv=-0.39118188917636587
#145 class=overlap cmp=-1 fine=-1 mtv=0.20000000000000284
#146 class=overlap cmp=-1 fine=-1 mtv=0.05000000000001137
#147 class=overlap cmp=-1 fine=-1 mtv=0.05000000000000071
#148 class=overlap cmp=1 fine=2 mtv=11.2
#149 class=none cmp=0 fine=-1 mtv=50.89998748898506
#150 class=overlap cmp=-1 fine=-1 mtv=0
#151 class=overlap cmp=-1 fine=-1 mtv=0.20000000000000284
#152 class=overlap cmp=-1 fine=-1 mtv=12.650491900742054
#153 class=overlap cmp=-1 fine=-1 mtv=0
#154 class=overlap cmp=-1 fine=-1 mtv=0.20000000000000284
#155 class=overlap cmp=-1 fine=-1 mtv=0
#156 class=overlap cmp=-1 fine=-1 mtv=0.1999999999999993
#157 class=overlap cmp=1 fine=2 mtv=11.2
#158 class=none cmp=0 fine=-1 mtv=5.989919364452362
#159 class=overlap cmp=-1 fine=-1 mtv=0.20000000000000284
#160 class=overlap cmp=-1 fine=-1 mtv=0.01999999999999602
#161 class=overlap cmp=-1 fine=-1 mtv=5.033223032951355
#162 class=overlap cmp=-1 fine=-1 mtv=0
#163 class=overlap cmp=-1 fine=-1 mtv=0
#164 class=overlap cmp=-1 fine=-1 mtv=0.19999999999998863
#165 class=overlap cmp=-1 fine=-1 mtv=0
#166 class=overlap cmp=1 fine=2 mtv=11.199999999999996
#167 class=none cmp=0 fine=-1 mtv=-8.306448608636856
#168 class=overlap cmp=-1 fine=-1 mtv=0
#169 class=overlap cmp=-1 fine=-1 mtv=0
#170 class=none cmp=0 fine=1 mtv=-4.963975749909878
#171 class=overlap cmp=-1 fine=2 mtv=-7.363610753044483
#172 class=overlap cmp=-1 fine=-1 mtv=0
#173 class=none cmp=0 fine=1 mtv=0.1999999999999993
#174 class=overlap cmp=-1 fine=-1 mtv=0.1460411325097084
#175 class=overlap cmp=-1 fine=2 mtv=-5.599999999999994
#176 class=none cmp=0 fine=-1 mtv=25.463606119155884
#177 class=overlap cmp=-1 fine=-1 mtv=0.1999999999999993
#178 class=overlap cmp=-1 fine=-1 mtv=0.20000000000000284
#179 class=none cmp=0 fine=-1 mtv=-3.8128188028931618
#180 class=overlap cmp=-1 fine=2 mtv=-7.73569313175976
#181 class=overlap cmp=-1 fine=-1 mtv=0.04999999999999716
#182 class=overlap cmp=-1 fine=-1 mtv=0.20000000000000284
#183 class=overlap cmp=-1 fine=-1 mtv=0.20000000000000284
#184 class=overlap cmp=-1 fine=2 mtv=-0.7000000000000028
#185 class=none cmp=0 fine=-1 mtv=40.14533844590187
#186 class=overlap cmp=-1 fine=-1 mtv=0.19999999999998863
#187 class=overlap cmp=-1 fine=-1 mtv=0
#188 class=none cmp=0 fine=1 mtv=-13.003074996173382
#189 class=overlap cmp=1 fine=2 mtv=5.855638838466257
#190 class=overlap cmp=-1 fine=-1 mtv=0.04999999999999716
#191 class=overlap cmp=-1 fine=-1 mtv=0.20000000000000284
#192 class=none cmp=0 fine=1 mtv=0
#193 class=overlap cmp=1 fine=1 mtv=0
#194 class=none cmp=0 fine=-1 mtv=-12.810939967632294
#195 class=overlap cmp=-1 fine=-1 mtv=0.01999999999999602
#196 class=overlap cmp=-1 fine=-1 mtv=0.19999999999998863
#197 class=none cmp=0 fine=1 mtv=-31.747546017169952
#198 class=overlap cmp=1 fine=2 mtv=7.544117365777495
#199 class=overlap cmp=-1 fine=-1 mtv=0.1999999999999993
#200 class=overlap cmp=-1 fine=-1 mtv=0.19999999999998863
#201 class=overlap cmp=-1 fine=-1 mtv=0.04999999999999716
#202 class=overlap cmp=1 fine=1 mtv=0
#203 class=none cmp=0 fine=-1 mtv=13.390984028577805
#204 class=overlap cmp=-1 fine=-1 mtv=0
#205 class=overlap cmp=-1 fine=-1 mtv=0
#206 class=none cmp=0 fine=1 mtv=-5.524651229381561
#207 class=overlap cmp=-1 fine=2 mtv=-7.6414530903100975
#208 class=overlap cmp=-1 fine=-1 mtv=0
#209 class=none cmp=0 fine=1 mtv=0.20000000000000284
#210 class=overlap cmp=-1 fine=-1 mtv=0.20000000000000284
#211 class=overlap cmp=-1 fine=2 mtv=-11.2
#212 class=none cmp=0 fine=-1 mtv=-27.986047387123108
#213 class=overlap cmp=-1 fine=-1 mtv=0
#214 class=overlap cmp=-1 fine=-1 mtv=0.01999999999999602
#215 class=none cmp=0 fine=-1 mtv=-53.66545329242945
#216 class=overlap cmp=-1 fine=2 mtv=-10.894127532094718
#217 class=overlap cmp=-1 fine=-1 mtv=0
#218 class=overlap cmp=-1 fine=-1 mtv=0
#219 class=overlap cmp=-1 fine=-1 mtv=0
#220 class=overlap cmp=-1 fine=2 mtv=-11.2
#221 class=none cmp=0 fine=-1 mtv=8.952109843492508
#222 class=overlap cmp=-1 fine=-1 mtv=0
#223 class=overlap cmp=-1 fine=-1 mtv=0
#224 class=none cmp=0 fine=-1 mtv=25.97353655844927
#225 class=overlap cmp=-1 fine=2 mtv=-3.2359755035489783
#226 class=overlap cmp=-1 fine=-1 mtv=0.19999999999998863
#227 class=overlap cmp=-1 fine=-1 mtv=0
#228 class=overlap cmp=-1 fine=-1 mtv=0.20000000000000284
#229 class=overlap cmp=1 fine=2 mtv=8.399999999999991
#230 class=none cmp=0 fine=-1 mtv=22.916082322597504
#231 class=overlap cmp=-1 fine=-1 mtv=0.019999999999999574
#232 class=overlap cmp=-1 fine=-1 mtv=0.20000000000000284
#233 class=none cmp=0 fine=-1 mtv=10.224664561450481
#234 class=overlap cmp=-1 fine=2 mtv=-0.5903209342621274
#235 class=overlap cmp=-1 fine=-1 mtv=0.04999999999999716
#236 class=overlap cmp=-1 fine=-1 mtv=0.05000000000001137
#237 class=none cmp=0 fine=1 mtv=0.1999999999999993
#238 class=overlap cmp=-1 fine=2 mtv=-11.2
#239 class=none cmp=0 fine=-1 mtv=7.427730172872543
#240 class=overlap cmp=-1 fine=-1 mtv=0.019999999999999574
#241 class=overlap cmp=-1 fine=-1 mtv=0
#242 class=none cmp=0 fine=-1 mtv=18.41291218996048
#243 class=overlap cmp=-1 fine=-1 mtv=0
#244 class=overlap cmp=-1 fine=-1 mtv=0.20000000000000284
#245 class=none cmp=0 fine=1 mtv=0
#246 class=overlap cmp=-1 fine=-1 mtv=0
#247 class=overlap cmp=1 fine=2 mtv=11.2
#248 class=none cmp=0 fine=-1 mtv=13.726030826568604
#249 class=overlap cmp=-1 fine=-1 mtv=0.1999999999999993
#250 class=overlap cmp=-1 fine=-1 mtv=0
#251 class=none cmp=0 fine=-1 mtv=36.970138154923916
#252 class=overlap cmp=-1 fine=-1 mtv=0
#253 class=overlap cmp=-1 fine=-1 mtv=0.05000000000001137
#254 class=overlap cmp=-1 fine=-1 mtv=0.20000000000000284
#255 class=overlap cmp=-1 fine=-1 mtv=0.05000000000001137
#256 class=overlap cmp=-1 fine=2 mtv=-11.2
#257 class=none cmp=0 fine=-1 mtv=-8.501841872930527
#258 class=overlap cmp=-1 fine=-1 mtv=0.020000000000003126
#259 class=overlap cmp=-1 fine=-1 mtv=0
#260 class=none cmp=0 fine=-1 mtv=4.296085841953754
#261 class=overlap cmp=1 fine=2 mtv=6.4012495435774355
#262 class=overlap cmp=-1 fine=-1 mtv=0.04999999999999716
#263 class=overlap cmp=-1 fine=-1 mtv=0
#264 class=none cmp=0 fine=1 mtv=0.04999999999999716
#265 class=overlap cmp=-1 fine=2 mtv=-5.599999999999994
#266 class=none cmp=0 fine=-1 mtv=-11.337680757045746
#267 class=overlap cmp=-1 fine=-1 mtv=0.20000000000000284
#268 class=overlap cmp=-1 fine=-1 mtv=0
#269 class=none cmp=0 fine=1 mtv=-1.875207133591175
#270 class=overlap cmp=-1 fine=2 mtv=-8.192867539077994
#271 class=overlap cmp=-1 fine=-1 mtv=0
#272 class=overlap cmp=-1 fine=-1 mtv=0.19999999999998863
#273 class=overlap cmp=-1 fine=-1 mtv=0.20000000000000284
#274 class=overlap cmp=-1 fine=2 mtv=-0.6999999999999993
#275 class=none cmp=0 fine=-1 mtv=62.24141189455986
#276 class=overlap cmp=-1 fine=-1 mtv=0
#277 class=overlap cmp=-1 fine=-1 mtv=0
#278 class=overlap cmp=-1 fine=-1 mtv=4.65025470405817
#279 class=overlap cmp=-1 fine=2 mtv=-3.703021181188518
#280 class=overlap cmp=-1 fine=-1 mtv=0
#281 class=overlap cmp=-1 fine=-1 mtv=0
#282 class=overlap cmp=-1 fine=-1 mtv=0.20000000000000284
#283 class=overlap cmp=1 fine=1 mtv=0
#284 class=none cmp=0 fine=-1 mtv=-30.320935606956482
#285 class=overlap cmp=-1 fine=-1 mtv=0.01999999999999602
#286 class=overlap cmp=-1 fine=-1 mtv=0.19999999999998863
#287 class=none cmp=0 fine=1 mtv=-4.828468777239323
#288 class=overlap cmp=-1 fine=2 mtv=-8.264282214641568
#289 class=overlap cmp=-1 fine=-1 mtv=0
#290 class=overlap cmp=-1 fine=-1 mtv=0.05000000000001137
#291 class=overlap cmp=-1 fine=-1 mtv=0
#292 class=overlap cmp=1 fine=1 mtv=0
#293 class=none cmp=0 fine=-1 mtv=-10.237879008054733
#294 class=overlap cmp=-1 fine=-1 mtv=0.19999999999998863
#295 class=overlap cmp=-1 fine=-1 mtv=0.19999999999998863
#296 class=overlap cmp=-1 fine=-1 mtv=-13.083514928817749
#297 class=overlap cmp=-1 fine=2 mtv=-7.2067578688263865
#298 class=overlap cmp=-1 fine=-1 mtv=0.20000000000000284
#299 class=overlap cmp=-1 fine=-1 mtv=0.05000000000000071
#300 class=overlap cmp=-1 fine=-1 mtv=0.04999999999999716
#301 class=overlap cmp=-1 fine=2 mtv=-11.2
#302 class=none cmp=0 fine=-1 mtv=-27.373864948749542
#303 class=overlap cmp=-1 fine=-1 mtv=0.20000000000000284
#304 class=overlap cmp=-1 fine=-1 mtv=0.20000000000000284
#305 class=none cmp=0 fine=-1 mtv=4.85050094127655
#306 class=overlap cmp=-1 fine=2 mtv=-12.40053642466664
#307 class=overlap cmp=-1 fine=-1 mtv=0
#308 class=none cmp=0 fine=1 mtv=0.19999999999998863
#309 class=overlap cmp=-1 fine=-1 mtv=0
#310 class=overlap cmp=1 fine=2 mtv=11.2
#311 class=none cmp=0 fine=-1 mtv=-4.867067486047745
#312 class=overlap cmp=-1 fine=-1 mtv=0
#313 class=overlap cmp=-1 fine=-1 mtv=0
#314 class=none cmp=0 fine=-1 mtv=31.33534613996744
#315 class=overlap cmp=-1 fine=2 mtv=-4.228059749677776
#316 class=overlap cmp=-1 fine=-1 mtv=0.05000000000001137
#317 class=overlap cmp=-1 fine=-1 mtv=0.20000000000000284
#318 class=overlap cmp=-1 fine=-1 mtv=0.20000000000000284
#319 class=overlap cmp=1 fine=2 mtv=8.399999999999991
#320 class=none cmp=0 fine=-1 mtv=13.221808195114136
#321 class=overlap cmp=-1 fine=-1 mtv=0
#322 class=overlap cmp=-1 fine=-1 mtv=0.01999999999999602
#323 class=none cmp=0 fine=-1 mtv=6.790942311286926"
`;

exports[`pinned draw-order decisions at camera angle (1,+0) 1`] = `
"#000 class=overlap cmp=-1 fine=2 mtv=-3.6043490290641813
#001 class=overlap cmp=1 fine=1 mtv=-0.05000000000000071
#002 class=overlap cmp=1 fine=1 mtv=-0.19999999999998863
#003 class=overlap cmp=-1 fine=-1 mtv=0.20000000000000284
#004 class=overlap cmp=-1 fine=2 mtv=-0.7000000000000028
#005 class=none cmp=0 fine=1 mtv=-59.99699708819389
#006 class=adjacent cmp=-1 fine=1 mtv=0.019999999999999574
#007 class=none cmp=0 fine=1 mtv=0.20000000000000284
#008 class=none cmp=0 fine=-1 mtv=-11.512313418090343
#009 class=overlap cmp=-1 fine=2 mtv=-4.83433160595596
#010 class=overlap cmp=1 fine=1 mtv=-0.1999999999999993
#011 class=overlap cmp=1 fine=1 mtv=-0.04999999999999716
#012 class=overlap cmp=-1 fine=-1 mtv=0
#013 class=overlap cmp=1 fine=1 mtv=0
#014 class=none cmp=0 fine=1 mtv=-21.608393490314484
#015 class=adjacent cmp=-1 fine=1 mtv=0
#016 class=adjacent cmp=0 fine=1 mtv=0
#017 class=none cmp=0 fine=1 mtv=-3.4164941385388374
#018 class=overlap cmp=-1 fine=2 mtv=-5.285718924552203
#019 class=overlap cmp=1 fine=1 mtv=0
#020 class=overlap cmp=1 fine=1 mtv=-0.1999999999999993
#021 class=overlap cmp=-1 fine=-1 mtv=0
#022 class=overlap cmp=1 fine=1 mtv=0
#023 class=none cmp=0 fine=1 mtv=2.7593582570552826
#024 class=adjacent cmp=-1 fine=1 mtv=0
#025 class=adjacent cmp=-1 fine=1 mtv=0
#026 class=overlap cmp=-1 fine=2 mtv=-8.879172883927822
#027 class=overlap cmp=-1 fine=2 mtv=-4.92371787428856
#028 class=overlap cmp=1 fine=1 mtv=-0.04999999999999716
#029 class=overlap cmp=1 fine=1 mtv=-0.20000000000000284
#030 class=overlap cmp=-1 fine=-1 mtv=0
#031 class=overlap cmp=-1 fine=2 mtv=-11.2
#032 class=none cmp=0 fine=1 mtv=17.728658437728882
#033 class=none cmp=0 fine=1 mtv=0.20000000000000284
#034 class=none cmp=0 fine=1 mtv=-0.1999999999999993
#035 class=none cmp=0 fine=1 mtv=-27.038332022726536
#036 class=overlap cmp=-1 fine=2 mtv=-9.692286848276854
#037 class=overlap cmp=1 fine=1 mtv=-0.20000000000000284
#038 class=overlap cmp=1 fine=1 mtv=-0.19999999999998863
#039 class=overlap cmp=-1 fine=-1 mtv=0.05000000000000071
#040 class=overlap cmp=-1 fine=2 mtv=-11.199999999999996
#041 class=none cmp=0 fine=1 mtv=22.140611559152603
#042 class=none cmp=0 fine=1 mtv=0
#043 class=none cmp=0 fine=1 mtv=0
#044 class=none cmp=0 fine=1 mtv=-18.346651136875153
#045 class=overlap cmp=1 fine=2 mtv=2.91135249249637
#046 class=overlap cmp=1 fine=1 mtv=-0.19999999999998863
#047 class=overlap cmp=1 fine=1 mtv=-0.20000000000000284
#048 class=overlap cmp=-1 fine=-1 mtv=0
#049 class=overlap cmp=-1 fine=2 mtv=-8.399999999999991
#050 class=none cmp=0 fine=1 mtv=10.626925766468048
#051 class=adjacent cmp=0 fine=1 mtv=0
#052 class=adjacent cmp=-1 fine=1 mtv=0.01999999999999602
#053 class=none cmp=0 fine=1 mtv=12.28047239780426
#054 class=overlap cmp=1 fine=2 mtv=0.530546286795289
#055 class=overlap cmp=1 fine=1 mtv=-0.04999999999999716
#056 class=overlap cmp=1 fine=1 mtv=0
#057 class=overlap cmp=-1 fine=-1 mtv=0.04999999999999716
#058 class=overlap cmp=1 fine=2 mtv=11.199999999999996
#059 class=none cmp=0 fine=1 mtv=5.585132569074631
#060 class=adjacent cmp=-1 fine=1 mtv=-0.01999999999999602
#061 class=none cmp=0 fine=1 mtv=-0.19999999999998863
#062 class=none cmp=0 fine=1 mtv=1.2673158645629883
#063 class=overlap cmp=1 fine=1 mtv=0
#064 class=overlap cmp=1 fine=1 mtv=-0.04999999999999982
#065 class=overlap cmp=1 fine=1 mtv=0
#066 class=overlap cmp=-1 fine=-1 mtv=0.04999999999999716
#067 class=overlap cmp=1 fine=2 mtv=11.199999999999996
#068 class=none cmp=0 fine=1 mtv=11.408689379692078
#069 class=adjacent cmp=-1 fine=1 mtv=0.020000000000003126
#070 class=adjacent cmp=-1 fine=1 mtv=0
#071 class=none cmp=0 fine=1 mtv=38.439699076116085
#072 class=overlap cmp=1 fine=1 mtv=0
#073 class=overlap cmp=1 fine=1 mtv=-0.19999999999998863
#074 class=none cmp=0 fine=-1 mtv=-0.20000000000000284
#075 class=overlap cmp=-1 fine=-1 mtv=0.20000000000000284
#076 class=overlap cmp=1 fine=2 mtv=11.199999999999996
#077 class=none cmp=0 fine=1 mtv=-9.363972634077072
#078 class=none cmp=0 fine=1 mtv=-0.19999999999998863
#079 class=adjacent cmp=-1 fine=1 mtv=-0.01999999999999602
#080 class=none cmp=0 fine=1 mtv=14.608170814812183
#081 class=overlap cmp=1 fine=2 mtv=5.240669309347865
#082 class=overlap cmp=1 fine=1 mtv=-0.19999999999999996
#083 class=overlap cmp=1 fine=1 mtv=-0.20000000000000284
#084 class=overlap cmp=-1 fine=-1 mtv=0.04999999999999716
#085 class=overlap cmp=1 fine=2 mtv=5.599999999999994
#086 class=none cmp=0 fine=1 mtv=-28.004892885684967
#087 class=adjacent cmp=-1 fine=1 mtv=0
#088 class=none cmp=0 fine=1 mtv=0.20000000000000284
#089 class=none cmp=0 fine=1 mtv=-25.24035442620516
#090 class=overlap cmp=1 fine=2 mtv=6.169690353050829
#091 class=overlap cmp=1 fine=1 mtv=-0.20000000000000284
#092 class=overlap cmp=1 fine=1 mtv=-0.19999999999998863
#093 class=none cmp=0 fine=1 mtv=0.04999999999999716
#094 class=overlap cmp=1 fine=2 mtv=0.7
#095 class=none cmp=0 fine=1 mtv=61.13254460692406
#096 class=adjacent cmp=-1 fine=1 mtv=0.019999999999999574
#097 class=adjacent cmp=-1 fine=1 mtv=-0.01999999999999602
#098 class=none cmp=0 fine=1 mtv=-2.0401914715766907
#099 class=overlap cmp=-1 fine=2 mtv=-3.7048930138349547
#100 class=overlap cmp=1 fine=1 mtv=0
#101 class=overlap cmp=1 fine=1 mtv=-0.04999999999999716
#102 class=none cmp=0 fine=1 mtv=0
#103 class=overlap cmp=1 fine=1 mtv=0
#104 class=none cmp=0 fine=1 mtv=-15.871129989624023
#105 class=none cmp=0 fine=1 mtv=-0.1999999999999993
#106 class=adjacent cmp=-1 fine=1 mtv=0.020000000000003126
#107 class=none cmp=0 fine=1 mtv=3.4979971274733543
#108 class=overlap cmp=-1 fine=2 mtv=-5.408003418892623
#109 class=overlap cmp=1 fine=1 mtv=-0.1999999999999993
#110 class=overlap cmp=1 fine=1 mtv=-0.04999999999999716
#111 class=overlap cmp=-1 fine=-1 mtv=0.20000000000000284
#112 class=overlap cmp=1 fine=1 mtv=0
#113 class=none cmp=0 fine=1 mtv=-24.28601822257042
#114 class=adjacent cmp=0 fine=1 mtv=0
#115 class=adjacent cmp=-1 fine=1 mtv=0
#116 class=none cmp=0 fine=1 mtv=-39.054399251937866
#117 class=overlap cmp=1 fine=2 mtv=4.807039917632935
#118 class=overlap cmp=1 fine=1 mtv=0
#119 class=overlap cmp=1 fine=1 mtv=0
#120 class=overlap cmp=-1 fine=-1 mtv=0.1999999999999993
#121 class=overlap cmp=1 fine=2 mtv=11.2
#122 class=none cmp=0 fine=1 mtv=-43.59064143896103
#123 class=adjacent cmp=-1 fine=1 mtv=-0.01999999999999602
#124 class=adjacent cmp=-1 fine=1 mtv=0
#125 class=none cmp=0 fine=1 mtv=16.64314942806959
#126 class=overlap cmp=-1 fine=2 mtv=-4.9638985015451915
#127 class=overlap cmp=1 fine=1 mtv=0
#128 class=overlap cmp=1 fine=1 mtv=-0.20000000000000284
#129 class=overlap cmp=-1 fine=-1 mtv=0.05000000000000071
#130 class=overlap cmp=1 fine=2 mtv=11.2
#131 class=none cmp=0 fine=1 mtv=1.6360914409160614
#132 class=none cmp=0 fine=1 mtv=0
#133 class=none cmp=0 fine=1 mtv=0
#134 class=none cmp=0 fine=1 mtv=8.671207167208195
#135 class=overlap cmp=1 fine=2 mtv=3.530861574783927
#136 class=overlap cmp=1 fine=1 mtv=0
#137 class=overlap cmp=1 fine=1 mtv=-0.20000000000000284
#138 class=overlap cmp=-1 fine=-1 mtv=0.04999999999999716
#139 class=overlap cmp=1 fine=2 mtv=8.399999999999999
#140 class=none cmp=0 fine=1 mtv=23.14029896259308
#141 class=none cmp=0 fine=1 mtv=0.20000000000000284
#142 class=adjacent cmp=-1 fine=1 mtv=0.01999999999999602
#143 class=none cmp=0 fine=1 mtv=-1.871799685060978
#144 class=overlap cmp=1 fine=2 mtv=0.39118188917636587
#145 class=overlap cmp=1 fine=1 mtv=-0.20000000000000284
#146 class=overlap cmp=1 fine=1 mtv=-0.05000000000001137
#147 class=overlap cmp=-1 fine=-1 mtv=0.05000000000000071
#148 class=overlap cmp=1 fine=2 mtv=11.2
#149 class=none cmp=0 fine=1 mtv=50.89998748898506
#150 class=adjacent cmp=-1 fine=1 mtv=0
#151 class=none cmp=0 fine=1 mtv=0.20000000000000284
#152 class=none cmp=0 fine=1 mtv=12.650491900742054
#153 class=overlap cmp=1 fine=1 mtv=0
#154 class=overlap cmp=1 fine=1 mtv=-0.20000000000000284
#155 class=overlap cmp=1 fine=1 mtv=0
#156 class=overlap cmp=-1 fine=-1 mtv=0.1999999999999993
#157 class=overlap cmp=1 fine=2 mtv=11.2
#158 class=none cmp=0 fine=1 mtv=5.989919364452362
#159 class=none cmp=0 fine=1 mtv=0.20000000000000284
#160 class=adjacent cmp=-1 fine=1 mtv=-0.01999999999999602
#161 class=overlap cmp=1 fine=1 mtv=-5.033223032951355
#162 class=overlap cmp=1 fine=1 mtv=0
#163 class=overlap cmp=1 fine=1 mtv=0
#164 class=overlap cmp=1 fine=1 mtv=-0.19999999999998863
#165 class=overlap cmp=-1 fine=-1 mtv=0
#166 class=overlap cmp=1 fine=2 mtv=11.199999999999996
#167 class=none cmp=0 fine=1 mtv=-8.306448608636856
#168 class=adjacent cmp=-1 fine=1 mtv=0
#169 class=adjacent cmp=-1 fine=1 mtv=0
#170 class=none cmp=0 fine=-1 mtv=-4.963975749909878
#171 class=overlap cmp=1 fine=2 mtv=7.363610753044483
#172 class=overlap cmp=1 fine=1 mtv=0
#173 class=none cmp=0 fine=-1 mtv=-0.1999999999999993
#174 class=none cmp=0 fine=1 mtv=-0.1460411325097084
#175 class=overlap cmp=1 fine=2 mtv=5.599999999999994
#176 class=none cmp=0 fine=1 mtv=25.463606119155884
#177 class=none cmp=0 fine=1 mtv=0.1999999999999993
#178 class=none cmp=0 fine=1 mtv=0.20000000000000284
#179 class=none cmp=0 fine=1 mtv=-3.8128188028931618
#180 class=overlap cmp=1 fine=2 mtv=7.73569313175976
#181 class=overlap cmp=1 fine=1 mtv=-0.04999999999999716
#182 class=overlap cmp=1 fine=1 mtv=-0.20000000000000284
#183 class=overlap cmp=-1 fine=-1 mtv=0.20000000000000284
#184 class=overlap cmp=-1 fine=2 mtv=-0.7000000000000028
#185 class=none cmp=0 fine=1 mtv=40.14533844590187
#186 class=none cmp=0 fine=1 mtv=-0.19999999999998863
#187 class=adjacent cmp=0 fine=1 mtv=0
#188 class=none cmp=0 fine=-1 mtv=-13.003074996173382
#189 class=overlap cmp=-1 fine=2 mtv=-5.855638838466257
#190 class=overlap cmp=1 fine=1 mtv=-0.04999999999999716
#191 class=overlap cmp=1 fine=1 mtv=-0.20000000000000284
#192 class=overlap cmp=-1 fine=-1 mtv=0
#193 class=overlap cmp=1 fine=1 mtv=0
#194 class=none cmp=0 fine=1 mtv=-12.810939967632294
#195 class=adjacent cmp=-1 fine=1 mtv=0.01999999999999602
#196 class=none cmp=0 fine=1 mtv=-0.19999999999998863
#197 class=none cmp=0 fine=-1 mtv=31.747546017169952
#198 class=overlap cmp=-1 fine=2 mtv=-7.544117365777495
#199 class=overlap cmp=1 fine=1 mtv=-0.1999999999999993
#200 class=overlap cmp=1 fine=1 mtv=-0.19999999999998863
#201 class=overlap cmp=-1 fine=-1 mtv=0.04999999999999716
#202 class=overlap cmp=1 fine=1 mtv=0
#203 class=none cmp=0 fine=1 mtv=13.390984028577805
#204 class=adjacent cmp=-1 fine=1 mtv=0
#205 class=adjacent cmp=-1 fine=1 mtv=0
#206 class=none cmp=0 fine=-1 mtv=5.524651229381561
#207 class=overlap cmp=-1 fine=2 mtv=-7.6414530903100975
#208 class=overlap cmp=1 fine=1 mtv=0
#209 class=none cmp=0 fine=-1 mtv=-0.20000000000000284
#210 class=overlap cmp=-1 fine=-1 mtv=0.20000000000000284
#211 class=overlap cmp=1 fine=2 mtv=11.2
#212 class=none cmp=0 fine=1 mtv=-27.986047387123108
#213 class=adjacent cmp=-1 fine=1 mtv=0
#214 class=adjacent cmp=-1 fine=1 mtv=0.01999999999999602
#215 class=none cmp=0 fine=1 mtv=-53.66545329242945
#216 class=overlap cmp=-1 fine=2 mtv=-10.894127532094718
#217 class=overlap cmp=1 fine=1 mtv=0
#218 class=overlap cmp=1 fine=1 mtv=0
#219 class=overlap cmp=-1 fine=-1 mtv=0
#220 class=overlap cmp=-1 fine=2 mtv=-11.2
#221 class=none cmp=0 fine=1 mtv=8.952109843492508
#222 class=none cmp=0 fine=1 mtv=0
#223 class=none cmp=0 fine=1 mtv=0
#224 class=none cmp=0 fine=1 mtv=25.97353655844927
#225 class=overlap cmp=1 fine=2 mtv=3.2359755035489783
#226 class=overlap cmp=1 fine=1 mtv=-0.19999999999998863
#227 class=overlap cmp=1 fine=1 mtv=0
#228 class=overlap cmp=-1 fine=-1 mtv=0.20000000000000284
#229 class=overlap cmp=-1 fine=2 mtv=-8.399999999999991
#230 class=none cmp=0 fine=1 mtv=22.916082322597504
#231 class=adjacent cmp=-1 fine=1 mtv=-0.019999999999999574
#232 class=none cmp=0 fine=1 mtv=0.20000000000000284
#233 class=none cmp=0 fine=1 mtv=10.224664561450481
#234 class=overlap cmp=1 fine=2 mtv=0.5903209342621274
#235 class=overlap cmp=1 fine=1 mtv=-0.04999999999999716
#236 class=overlap cmp=1 fine=1 mtv=-0.05000000000001137
#237 class=overlap cmp=-1 fine=-1 mtv=0.1999999999999993
#238 class=overlap cmp=-1 fine=2 mtv=-11.2
#239 class=none cmp=0 fine=1 mtv=7.427730172872543
#240 class=adjacent cmp=-1 fine=1 mtv=-0.019999999999999574
#241 class=adjacent cmp=-1 fine=1 mtv=0
#242 class=none cmp=0 fine=1 mtv=-18.41291218996048
#243 class=overlap cmp=1 fine=1 mtv=0
#244 class=overlap cmp=1 fine=1 mtv=-0.20000000000000284
#245 class=none cmp=0 fine=-1 mtv=0
#246 class=overlap cmp=-1 fine=-1 mtv=0
#247 class=overlap cmp=1 fine=2 mtv=11.2
#248 class=none cmp=0 fine=1 mtv=13.726030826568604
#249 class=none cmp=0 fine=1 mtv=0.1999999999999993
#250 class=adjacent cmp=-1 fine=1 mtv=0
#251 class=none cmp=0 fine=1 mtv=36.970138154923916
#252 class=overlap cmp=1 fine=1 mtv=0
#253 class=overlap cmp=1 fine=1 mtv=-0.05000000000001137
#254 class=overlap cmp=1 fine=1 mtv=-0.20000000000000284
#255 class=overlap cmp=-1 fine=-1 mtv=0.05000000000001137
#256 class=overlap cmp=-1 fine=2 mtv=-11.2
#257 class=none cmp=0 fine=1 mtv=-8.501841872930527
#258 class=adjacent cmp=-1 fine=1 mtv=0.020000000000003126
#259 class=adjacent cmp=-1 fine=1 mtv=0
#260 class=none cmp=0 fine=1 mtv=4.296085841953754
#261 class=overlap cmp=-1 fine=2 mtv=-6.4012495435774355
#262 class=overlap cmp=1 fine=1 mtv=-0.04999999999999716
#263 class=overlap cmp=1 fine=1 mtv=0
#264 class=overlap cmp=-1 fine=-1 mtv=0.04999999999999716
#265 class=overlap cmp=1 fine=2 mtv=5.599999999999994
#266 class=none cmp=0 fine=1 mtv=-11.337680757045746
#267 class=none cmp=0 fine=1 mtv=0.20000000000000284
#268 class=adjacent cmp=-1 fine=1 mtv=0
#269 class=none cmp=0 fine=-1 mtv=-1.875207133591175
#270 class=overlap cmp=-1 fine=2 mtv=-8.192867539077994
#271 class=overlap cmp=1 fine=1 mtv=0
#272 class=overlap cmp=1 fine=1 mtv=-0.19999999999998863
#273 class=none cmp=0 fine=1 mtv=0.20000000000000284
#274 class=overlap cmp=-1 fine=2 mtv=-0.6999999999999993
#275 class=none cmp=0 fine=1 mtv=62.24141189455986
#276 class=adjacent cmp=-1 fine=1 mtv=0
#277 class=adjacent cmp=-1 fine=1 mtv=0
#278 class=none cmp=0 fine=1 mtv=4.65025470405817
#279 class=overlap cmp=1 fine=2 mtv=3.703021181188518
#280 class=overlap cmp=1 fine=1 mtv=0
#281 class=overlap cmp=1 fine=1 mtv=0
#282 class=none cmp=0 fine=1 mtv=0.20000000000000284
#283 class=overlap cmp=1 fine=1 mtv=0
#284 class=none cmp=0 fine=1 mtv=-30.320935606956482
#285 class=adjacent cmp=-1 fine=1 mtv=0.01999999999999602
#286 class=none cmp=0 fine=1 mtv=-0.19999999999998863
#287 class=none cmp=0 fine=-1 mtv=-4.828468777239323
#288 class=overlap cmp=1 fine=2 mtv=8.264282214641568
#289 class=overlap cmp=1 fine=1 mtv=0
#290 class=overlap cmp=1 fine=1 mtv=-0.05000000000001137
#291 class=overlap cmp=-1 fine=-1 mtv=0
#292 class=overlap cmp=1 fine=1 mtv=0
#293 class=none cmp=0 fine=1 mtv=-10.237879008054733
#294 class=none cmp=0 fine=1 mtv=-0.19999999999998863
#295 class=none cmp=0 fine=1 mtv=0.19999999999998863
#296 class=none cmp=0 fine=-1 mtv=13.083514928817749
#297 class=overlap cmp=-1 fine=2 mtv=-7.2067578688263865
#298 class=overlap cmp=1 fine=1 mtv=-0.20000000000000284
#299 class=overlap cmp=1 fine=1 mtv=-0.05000000000000071
#300 class=overlap cmp=-1 fine=-1 mtv=0.04999999999999716
#301 class=overlap cmp=1 fine=2 mtv=11.2
#302 class=none cmp=0 fine=1 mtv=-27.373864948749542
#303 class=none cmp=0 fine=1 mtv=0.20000000000000284
#304 class=none cmp=0 fine=1 mtv=0.20000000000000284
#305 class=none cmp=0 fine=1 mtv=-4.85050094127655
#306 class=overlap cmp=-1 fine=2 mtv=-12.40053642466664
#307 class=overlap cmp=1 fine=1 mtv=0
#308 class=none cmp=0 fine=-1 mtv=-0.19999999999998863
#309 class=overlap cmp=-1 fine=-1 mtv=0
#310 class=overlap cmp=1 fine=2 mtv=11.2
#311 class=none cmp=0 fine=1 mtv=-4.867067486047745
#312 class=none cmp=0 fine=1 mtv=0
#313 class=none cmp=0 fine=1 mtv=0
#314 class=none cmp=0 fine=1 mtv=31.33534613996744
#315 class=overlap cmp=1 fine=2 mtv=4.228059749677776
#316 class=overlap cmp=1 fine=1 mtv=-0.05000000000001137
#317 class=overlap cmp=1 fine=1 mtv=-0.20000000000000284
#318 class=overlap cmp=-1 fine=-1 mtv=0.20000000000000284
#319 class=overlap cmp=-1 fine=2 mtv=-8.399999999999991
#320 class=none cmp=0 fine=1 mtv=13.221808195114136
#321 class=adjacent cmp=0 fine=1 mtv=0
#322 class=adjacent cmp=-1 fine=1 mtv=0.01999999999999602
#323 class=none cmp=0 fine=1 mtv=-6.790942311286926"
`;
